@@ -30,21 +30,23 @@ import java.util.TreeSet;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.regex.PatternSyntaxException;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.apache.camel.catalog.impl.AbstractCamelCatalog;
+import org.apache.camel.catalog.impl.AbstractCachingCamelCatalog;
 import org.apache.camel.catalog.impl.CatalogHelper;
 import org.apache.camel.tooling.model.ArtifactModel;
 import org.apache.camel.tooling.model.BaseModel;
 import org.apache.camel.tooling.model.ComponentModel;
 import org.apache.camel.tooling.model.DataFormatModel;
+import org.apache.camel.tooling.model.DevConsoleModel;
 import org.apache.camel.tooling.model.EipModel;
 import org.apache.camel.tooling.model.JsonMapper;
 import org.apache.camel.tooling.model.LanguageModel;
 import org.apache.camel.tooling.model.MainModel;
 import org.apache.camel.tooling.model.OtherModel;
+import org.apache.camel.tooling.model.PojoBeanModel;
 import org.apache.camel.tooling.model.ReleaseModel;
+import org.apache.camel.tooling.model.TransformerModel;
 import org.apache.camel.util.json.JsonArray;
 import org.apache.camel.util.json.JsonObject;
 import org.apache.camel.util.json.Jsoner;
@@ -52,12 +54,43 @@ import org.apache.camel.util.json.Jsoner;
 /**
  * Default {@link CamelCatalog}.
  */
-public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCatalog {
+public class DefaultCamelCatalog extends AbstractCachingCamelCatalog implements CamelCatalog {
 
     private static final String MODELS_CATALOG = "org/apache/camel/catalog/models.properties";
     private static final String SCHEMAS_XML = "org/apache/camel/catalog/schemas";
     private static final String MAIN_DIR = "org/apache/camel/catalog/main";
     private static final String BASE_RESOURCE_DIR = "org/apache/camel/catalog";
+
+    public static final String FIND_COMPONENT_NAMES = "findComponentNames";
+    public static final String FIND_COMPONENT_LABELS = "findComponentLabels";
+    public static final String LIST_COMPONENTS_AS_JSON = "listComponentsAsJson";
+
+    public static final String FIND_DATA_FORMAT_NAMES = "findDataFormatNames";
+    public static final String FIND_DATA_FORMAT_LABELS = "findDataFormatLabels";
+    public static final String LIST_DATA_FORMATS_AS_JSON = "listDataFormatsAsJson";
+
+    public static final String FIND_LANGUAGE_NAMES = "findLanguageNames";
+    public static final String FIND_LANGUAGE_LABELS = "findLanguageLabels";
+    public static final String LIST_LANGUAGES_AS_JSON = "listLanguagesAsJson";
+
+    public static final String FIND_TRANSFORMER_NAMES = "findTransformerNames";
+    public static final String LIST_TRANSFORMERS_AS_JSON = "listTransformersAsJson";
+
+    public static final String FIND_CONSOLE_NAMES = "findConsoleNames";
+    public static final String LIST_CONSOLES_AS_JSON = "listConsolesAsJson";
+
+    public static final String FIND_MODEL_NAMES = "findModelNames";
+    public static final String FIND_MODEL_LABELS = "findModelLabels";
+    public static final String LIST_MODELS_AS_JSON = "listModelsAsJson";
+
+    public static final String FIND_OTHER_NAMES = "findOtherNames";
+    public static final String FIND_OTHER_LABELS = "findOtherLabels";
+    public static final String LIST_OTHERS_AS_JSON = "listOthersAsJson";
+
+    public static final String FIND_BEAN_NAMES = "findBeanNames";
+    public static final String LIST_BEANS_AS_JSON = "listBeansAsJson";
+
+    public static final String SUMMARY_AS_JSON = "summaryAsJson";
 
     private final VersionHelper version = new VersionHelper();
 
@@ -67,10 +100,6 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
     private final Map<String, String> extraDataFormats = new HashMap<>();
     private final Map<String, String> extraDataFormatsJSonSchema = new HashMap<>();
 
-    // cache of operation -> result
-    private final Map<String, Object> cache = new HashMap<>();
-
-    private boolean caching;
     private VersionManager versionManager = new DefaultVersionManager(this);
     private RuntimeProvider runtimeProvider = new DefaultRuntimeProvider(this);
 
@@ -87,7 +116,8 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
      * @param caching whether to use cache
      */
     public DefaultCamelCatalog(boolean caching) {
-        this.caching = caching;
+        super(caching);
+
         setJSonSchemaResolver(new CamelCatalogJSonSchemaResolver(
                 this, extraComponents, extraComponentsJSonSchema, extraDataFormats, extraDataFormatsJSonSchema));
     }
@@ -102,23 +132,19 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
         this.runtimeProvider = runtimeProvider;
         // inject CamelCatalog to the provider
         this.runtimeProvider.setCamelCatalog(this);
+
         // invalidate the cache
-        cache.remove("findComponentNames");
-        cache.remove("listComponentsAsJson");
-        cache.remove("findDataFormatNames");
-        cache.remove("listDataFormatsAsJson");
-        cache.remove("findLanguageNames");
-        cache.remove("listLanguagesAsJson");
+        super.clearCache();
     }
 
     @Override
     public void enableCache() {
-        caching = true;
+        super.setCaching(true);
     }
 
     @Override
     public boolean isCaching() {
-        return caching;
+        return super.isCaching();
     }
 
     @Override
@@ -135,9 +161,11 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
     public void addComponent(String name, String className) {
         extraComponents.put(name, className);
         // invalidate the cache
-        cache.remove("findComponentNames");
-        cache.remove("findComponentLabels");
-        cache.remove("listComponentsAsJson");
+        getCache().remove(FIND_COMPONENT_NAMES);
+        getCache().remove(FIND_COMPONENT_LABELS);
+        getCache().remove(LIST_COMPONENTS_AS_JSON);
+
+        getCache().remove(SUMMARY_AS_JSON);
     }
 
     @Override
@@ -152,9 +180,11 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
     public void addDataFormat(String name, String className) {
         extraDataFormats.put(name, className);
         // invalidate the cache
-        cache.remove("findDataFormatNames");
-        cache.remove("findDataFormatLabels");
-        cache.remove("listDataFormatsAsJson");
+        getCache().remove(FIND_DATA_FORMAT_NAMES);
+        getCache().remove(FIND_DATA_FORMAT_LABELS);
+        getCache().remove(LIST_DATA_FORMATS_AS_JSON);
+
+        getCache().remove(SUMMARY_AS_JSON);
     }
 
     @Override
@@ -176,7 +206,7 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
             return true;
         } else if (versionManager.loadVersion(version)) {
             // invalidate existing cache if we loaded a new version
-            cache.clear();
+            super.clearCache();
             return true;
         }
         return false;
@@ -199,28 +229,38 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
 
     @Override
     public List<String> findComponentNames() {
-        return cache("findComponentNames", () -> Stream.of(runtimeProvider.findComponentNames(), extraComponents.keySet())
+        return cache(FIND_COMPONENT_NAMES, () -> Stream.of(runtimeProvider.findComponentNames(), extraComponents.keySet())
                 .flatMap(Collection::stream)
                 .sorted()
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
     public List<String> findDataFormatNames() {
-        return cache("findDataFormatNames", () -> Stream.of(runtimeProvider.findDataFormatNames(), extraDataFormats.keySet())
+        return cache(FIND_DATA_FORMAT_NAMES, () -> Stream.of(runtimeProvider.findDataFormatNames(), extraDataFormats.keySet())
                 .flatMap(Collection::stream)
                 .sorted()
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
     public List<String> findLanguageNames() {
-        return cache("findLanguageNames", runtimeProvider::findLanguageNames);
+        return cache(FIND_LANGUAGE_NAMES, runtimeProvider::findLanguageNames);
+    }
+
+    @Override
+    public List<String> findTransformerNames() {
+        return cache(FIND_TRANSFORMER_NAMES, runtimeProvider::findTransformerNames);
+    }
+
+    @Override
+    public List<String> findDevConsoleNames() {
+        return cache(FIND_CONSOLE_NAMES, runtimeProvider::findDevConsoleNames);
     }
 
     @Override
     public List<String> findModelNames() {
-        return cache("findModelNames", () -> {
+        return cache(FIND_MODEL_NAMES, () -> {
             try (InputStream is = versionManager.getResourceAsStream(MODELS_CATALOG)) {
                 return CatalogHelper.loadLines(is);
             } catch (IOException e) {
@@ -231,7 +271,12 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
 
     @Override
     public List<String> findOtherNames() {
-        return cache("findOtherNames", runtimeProvider::findOtherNames);
+        return cache(FIND_OTHER_NAMES, runtimeProvider::findOtherNames);
+    }
+
+    @Override
+    public List<String> findBeansNames() {
+        return cache(FIND_BEAN_NAMES, runtimeProvider::findBeansNames);
     }
 
     @Override
@@ -299,6 +344,11 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
     }
 
     @Override
+    public PojoBeanModel pojoBeanModel(String name) {
+        return cache("pojo-bean-model-" + name, name, super::pojoBeanModel);
+    }
+
+    @Override
     public String componentJSonSchema(String name) {
         return cache("component-" + name, name, super::componentJSonSchema);
     }
@@ -324,8 +374,28 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
     }
 
     @Override
+    public String transformerJSonSchema(String name) {
+        return cache("transformer-" + name, name, super::transformerJSonSchema);
+    }
+
+    @Override
+    public String devConsoleJSonSchema(String name) {
+        return cache("dev-console-" + name, name, super::devConsoleJSonSchema);
+    }
+
+    @Override
     public LanguageModel languageModel(String name) {
         return cache("language-model-" + name, name, super::languageModel);
+    }
+
+    @Override
+    public TransformerModel transformerModel(String name) {
+        return cache("transformer-model-" + name, name, super::transformerModel);
+    }
+
+    @Override
+    public DevConsoleModel devConsoleModel(String name) {
+        return cache("dev-console-model-" + name, name, super::devConsoleModel);
     }
 
     @Override
@@ -350,27 +420,27 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
 
     @Override
     public Set<String> findModelLabels() {
-        return cache("findModelLabels", () -> findLabels(this::findModelNames, this::eipModel));
+        return cache(FIND_MODEL_LABELS, () -> findLabels(this::findModelNames, this::eipModel));
     }
 
     @Override
     public Set<String> findComponentLabels() {
-        return cache("findComponentLabels", () -> findLabels(this::findComponentNames, this::componentModel));
+        return cache(FIND_COMPONENT_LABELS, () -> findLabels(this::findComponentNames, this::componentModel));
     }
 
     @Override
     public Set<String> findDataFormatLabels() {
-        return cache("findDataFormatLabels", () -> findLabels(this::findDataFormatNames, this::dataFormatModel));
+        return cache(FIND_DATA_FORMAT_LABELS, () -> findLabels(this::findDataFormatNames, this::dataFormatModel));
     }
 
     @Override
     public Set<String> findLanguageLabels() {
-        return cache("findLanguageLabels", () -> findLabels(this::findLanguageNames, this::languageModel));
+        return cache(FIND_LANGUAGE_LABELS, () -> findLabels(this::findLanguageNames, this::languageModel));
     }
 
     @Override
     public Set<String> findOtherLabels() {
-        return cache("findOtherLabels", () -> findLabels(this::findOtherNames, this::otherModel));
+        return cache(FIND_OTHER_LABELS, () -> findLabels(this::findOtherNames, this::otherModel));
     }
 
     private SortedSet<String> findLabels(Supplier<List<String>> findNames, Function<String, ? extends BaseModel<?>> loadModel) {
@@ -399,88 +469,155 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
 
     @Override
     public String listComponentsAsJson() {
-        return cache("listComponentsAsJson", () -> JsonMapper.serialize(findComponentNames().stream()
+        return cache(LIST_COMPONENTS_AS_JSON, () -> JsonMapper.serialize(findComponentNames().stream()
                 .map(this::componentJSonSchema)
                 .map(JsonMapper::deserialize)
                 .map(o -> o.get("component"))
-                .collect(Collectors.toList())));
+                .toList()));
     }
 
     @Override
     public String listDataFormatsAsJson() {
-        return cache("listDataFormatsAsJson", () -> JsonMapper.serialize(findDataFormatNames().stream()
+        return cache(LIST_DATA_FORMATS_AS_JSON, () -> JsonMapper.serialize(findDataFormatNames().stream()
                 .map(this::dataFormatJSonSchema)
                 .map(JsonMapper::deserialize)
                 .map(o -> o.get("dataformat"))
-                .collect(Collectors.toList())));
+                .toList()));
     }
 
     @Override
     public String listLanguagesAsJson() {
-        return cache("listLanguagesAsJson", () -> JsonMapper.serialize(findLanguageNames().stream()
+        return cache(LIST_LANGUAGES_AS_JSON, () -> JsonMapper.serialize(findLanguageNames().stream()
                 .map(this::languageJSonSchema)
                 .map(JsonMapper::deserialize)
                 .map(o -> o.get("language"))
-                .collect(Collectors.toList())));
+                .toList()));
+    }
+
+    @Override
+    public String listTransformersAsJson() {
+        return cache(LIST_TRANSFORMERS_AS_JSON, () -> JsonMapper.serialize(findTransformerNames().stream()
+                .map(this::transformerJSonSchema)
+                .map(JsonMapper::deserialize)
+                .map(o -> o.get("transformer"))
+                .toList()));
+    }
+
+    @Override
+    public String listDevConsolesAsJson() {
+        return cache(LIST_CONSOLES_AS_JSON, () -> JsonMapper.serialize(findDevConsoleNames().stream()
+                .map(this::devConsoleJSonSchema)
+                .map(JsonMapper::deserialize)
+                .map(o -> o.get("console"))
+                .toList()));
     }
 
     @Override
     public String listModelsAsJson() {
-        return cache("listModelsAsJson", () -> JsonMapper.serialize(findModelNames().stream()
+        return cache(LIST_MODELS_AS_JSON, () -> JsonMapper.serialize(findModelNames().stream()
                 .map(this::modelJSonSchema)
                 .map(JsonMapper::deserialize)
                 .map(o -> o.get("model"))
-                .collect(Collectors.toList())));
+                .toList()));
     }
 
     @Override
     public String listOthersAsJson() {
-        return cache("listOthersAsJson", () -> JsonMapper.serialize(findOtherNames().stream()
+        return cache(LIST_OTHERS_AS_JSON, () -> JsonMapper.serialize(findOtherNames().stream()
                 .map(this::otherJSonSchema)
                 .map(JsonMapper::deserialize)
                 .map(o -> o.get("other"))
-                .collect(Collectors.toList())));
+                .toList()));
     }
 
     @Override
     public String summaryAsJson() {
-        return cache("summaryAsJson", () -> {
+        return cache(SUMMARY_AS_JSON, () -> {
             Map<String, Object> obj = new JsonObject();
-            obj.put("version", getCatalogVersion());
+            obj.put("version", getLoadedVersion());
             obj.put("models", findModelNames().size());
             obj.put("components", findComponentNames().size());
             obj.put("dataformats", findDataFormatNames().size());
             obj.put("languages", findLanguageNames().size());
             obj.put("others", findOtherNames().size());
+            obj.put("beans", findBeansNames().size());
+            obj.put("dev-consoles", findDevConsoleNames().size());
+            obj.put("transformers", findTransformerNames().size());
             return JsonMapper.serialize(obj);
         });
     }
 
     @Override
     public ArtifactModel<?> modelFromMavenGAV(String groupId, String artifactId, String version) {
-        for (String name : findComponentNames()) {
-            ArtifactModel<?> am = componentModel(name);
-            if (matchArtifact(am, groupId, artifactId, version)) {
-                return am;
+        try {
+            for (String name : findComponentNames()) {
+                ArtifactModel<?> am = componentModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
             }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
         }
-        for (String name : findDataFormatNames()) {
-            ArtifactModel<?> am = dataFormatModel(name);
-            if (matchArtifact(am, groupId, artifactId, version)) {
-                return am;
+        try {
+            for (String name : findDataFormatNames()) {
+                ArtifactModel<?> am = dataFormatModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
             }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
         }
-        for (String name : findLanguageNames()) {
-            ArtifactModel<?> am = languageModel(name);
-            if (matchArtifact(am, groupId, artifactId, version)) {
-                return am;
+        try {
+            for (String name : findLanguageNames()) {
+                ArtifactModel<?> am = languageModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
             }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
         }
-        for (String name : findOtherNames()) {
-            ArtifactModel<?> am = otherModel(name);
-            if (matchArtifact(am, groupId, artifactId, version)) {
-                return am;
+        try {
+            for (String name : findOtherNames()) {
+                ArtifactModel<?> am = otherModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
             }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
+        }
+        try {
+            for (String name : findTransformerNames()) {
+                ArtifactModel<?> am = transformerModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
+            }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
+        }
+        try {
+            for (String name : findDevConsoleNames()) {
+                ArtifactModel<?> am = devConsoleModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
+            }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
+        }
+        try {
+            for (String name : findBeansNames()) {
+                ArtifactModel<?> am = pojoBeanModel(name);
+                if (matchArtifact(am, groupId, artifactId, version)) {
+                    return am;
+                }
+            }
+        } catch (Throwable e) {
+            // ignore as catalog can be dynamic changed and older releases may not have newer apis
         }
         return null;
     }
@@ -526,54 +663,6 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
                 && (version == null || version.isBlank() || version.equals(am.getVersion()));
     }
 
-    @SuppressWarnings("unchecked")
-    private <T> T cache(String name, Supplier<T> loader) {
-        if (caching) {
-            T t = (T) cache.get(name);
-            if (t == null) {
-                t = loader.get();
-                if (t != null) {
-                    cache.put(name, t);
-                }
-            }
-            return t;
-        } else {
-            return loader.get();
-        }
-    }
-
-    @SuppressWarnings("unchecked")
-    private <T> T cache(String key, String name, Function<String, T> loader) {
-        if (caching) {
-            T t = (T) cache.get(key);
-            if (t == null) {
-                t = loader.apply(name);
-                if (t != null) {
-                    cache.put(key, t);
-                }
-            }
-            return t;
-        } else {
-            return loader.apply(name);
-        }
-    }
-
-    @SuppressWarnings("unchecked")
-    private <T> T cache(String name, Function<String, T> loader) {
-        if (caching) {
-            T t = (T) cache.get(name);
-            if (t == null) {
-                t = loader.apply(name);
-                if (t != null) {
-                    cache.put(name, t);
-                }
-            }
-            return t;
-        } else {
-            return loader.apply(name);
-        }
-    }
-
     private String loadResource(String file) {
         try (InputStream is = versionManager.getResourceAsStream(file)) {
             return is != null ? CatalogHelper.loadText(is) : null;
@@ -581,7 +670,5 @@ public class DefaultCamelCatalog extends AbstractCamelCatalog implements CamelCa
             return null;
         }
     }
-
-    // CHECKSTYLE:ON
 
 }
