@@ -16,13 +16,14 @@
  */
 package org.apache.camel.component.azure.cosmosdb.client;
 
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.azure.cosmos.CosmosAsyncClient;
 import com.azure.cosmos.CosmosClient;
 import com.azure.cosmos.CosmosClientBuilder;
+import com.azure.identity.DefaultAzureCredentialBuilder;
 import org.apache.camel.component.azure.cosmosdb.CosmosDbConfiguration;
+import org.apache.camel.component.azure.cosmosdb.CredentialType;
 import org.apache.camel.util.ObjectHelper;
 
 public final class CosmosDbClientFactory {
@@ -41,8 +42,8 @@ public final class CosmosDbClientFactory {
     }
 
     private static CosmosClientBuilder createBasicClient(final CosmosDbConfiguration configuration) {
+
         CosmosClientBuilder builder = new CosmosClientBuilder()
-                .key(configuration.getAccountKey())
                 .endpoint(configuration.getDatabaseEndpoint())
                 .contentResponseOnWriteEnabled(configuration.isContentResponseOnWriteEnabled())
                 .consistencyLevel(configuration.getConsistencyLevel())
@@ -53,9 +54,13 @@ public final class CosmosDbClientFactory {
         if (ObjectHelper.isNotEmpty(configuration.getPreferredRegions())) {
             builder.preferredRegions(Stream.of(configuration.getPreferredRegions().split(","))
                     .map(String::trim)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
-
+        if (configuration.getCredentialType().equals(CredentialType.AZURE_IDENTITY)) {
+            builder.credential(new DefaultAzureCredentialBuilder().build());
+        } else {
+            builder.key(configuration.getAccountKey());
+        }
         return builder;
     }
 }
