@@ -26,7 +26,6 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.azure.core.http.rest.PagedIterable;
 import com.azure.core.http.rest.Response;
@@ -72,6 +71,7 @@ import org.slf4j.LoggerFactory;
 public class BlobOperations {
 
     private static final Logger LOG = LoggerFactory.getLogger(BlobOperations.class);
+    public static final String MISSING_EXCHANGE = "exchange cannot be null";
 
     private final BlobClientWrapper client;
     private final BlobConfigurationOptionsProxy configurationProxy;
@@ -84,7 +84,9 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse getBlob(final Exchange exchange) throws IOException {
-        LOG.trace("Getting a blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Getting a blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         final Message message = BlobUtils.getInMessage(exchange);
         final OutputStream outputStream = ObjectHelper.isEmpty(message) ? null : message.getBody(OutputStream.class);
@@ -178,12 +180,14 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse uploadBlockBlob(final Exchange exchange) throws IOException {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final BlobStreamAndLength blobStreamAndLength = BlobStreamAndLength.createBlobStreamAndLengthFromExchangeBody(exchange);
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
 
-        LOG.trace("Putting a block blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Putting a block blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         try {
             final Response<BlockBlobItem> response = client.uploadBlockBlob(blobStreamAndLength.getInputStream(),
@@ -199,7 +203,7 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse stageBlockBlobList(final Exchange exchange) throws Exception {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final Object object = exchange.getIn().getMandatoryBody();
 
@@ -214,7 +218,10 @@ public class BlobOperations {
             throw new IllegalArgumentException("Illegal storageBlocks payload");
         }
 
-        LOG.trace("Putting a blob [{}] from blocks from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Putting a blob [{}] from blocks from exchange [{}]...", configurationProxy.getBlobName(exchange),
+                    exchange);
+        }
 
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
 
@@ -243,7 +250,7 @@ public class BlobOperations {
 
     @SuppressWarnings("unchecked")
     public BlobOperationResponse commitBlobBlockList(final Exchange exchange) throws Exception {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final Object object = exchange.getIn().getMandatoryBody();
 
@@ -257,13 +264,16 @@ public class BlobOperations {
             throw new IllegalArgumentException("Illegal commit block list payload");
         }
 
-        LOG.trace("Putting a blob [{}] block list from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Putting a blob [{}] block list from exchange [{}]...", configurationProxy.getBlobName(exchange),
+                    exchange);
+        }
 
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
 
         final List<String> blockIds = blockEntries.stream()
                 .map(Block::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         final Response<BlockBlobItem> response = client.commitBlockBlob(blockIds, commonRequestOptions.getBlobHttpHeaders(),
                 commonRequestOptions.getMetadata(),
@@ -274,7 +284,10 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse getBlobBlockList(final Exchange exchange) {
-        LOG.trace("Getting the blob block list [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Getting the blob block list [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange),
+                    exchange);
+        }
 
         final BlockListType blockListType = configurationProxy.getBlockListType(exchange);
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
@@ -286,7 +299,9 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse createAppendBlob(final Exchange exchange) {
-        LOG.trace("Creating an append blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Creating an append blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
 
@@ -298,7 +313,9 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse copyBlob(final Exchange exchange) {
-        LOG.trace("Creating an append blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Creating an append blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         String sourceBlobName = configurationProxy.getBlobName(exchange);
         String sourceAccountName = exchange.getMessage().getHeader(BlobConstants.SOURCE_BLOB_ACCOUNT_NAME, String.class);
@@ -317,7 +334,7 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse commitAppendBlob(final Exchange exchange) throws IOException {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
         final boolean createAppendBlob = configurationProxy.isCreateAppendBlob(exchange);
@@ -342,7 +359,9 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse createPageBlob(final Exchange exchange) {
-        LOG.trace("Creating a page blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Creating a page blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         final Long pageSize = getPageBlobSize(exchange);
         final BlobCommonRequestOptions requestOptions = getCommonRequestOptions(exchange);
@@ -355,8 +374,8 @@ public class BlobOperations {
         return BlobOperationResponse.createWithEmptyBody(response);
     }
 
-    public BlobOperationResponse uploadPageBlob(final Exchange exchange) throws IOException {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+    public BlobOperationResponse uploadPageBlob(final Exchange exchange) throws Exception {
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final boolean createPageBlob = configurationProxy.isCreatePageBlob(exchange);
 
@@ -365,27 +384,28 @@ public class BlobOperations {
             createPageBlob(exchange);
         }
 
-        final BlobStreamAndLength streamAndLength = BlobStreamAndLength.createBlobStreamAndLengthFromExchangeBody(exchange);
+        final InputStream is = exchange.getMessage().getMandatoryBody(InputStream.class);
         final BlobCommonRequestOptions requestOptions = getCommonRequestOptions(exchange);
         final PageRange pageRange = configurationProxy.getPageRange(exchange);
-
         if (pageRange == null) {
             throw new IllegalArgumentException("You need to set page range in the exchange headers.");
         }
 
         try {
             final Response<PageBlobItem> response
-                    = client.uploadPageBlob(pageRange, streamAndLength.getInputStream(), requestOptions.getContentMD5(),
+                    = client.uploadPageBlob(pageRange, is, requestOptions.getContentMD5(),
                             requestOptions.getBlobRequestConditions(), requestOptions.getTimeout());
 
             return BlobOperationResponse.createWithEmptyBody(response);
         } finally {
-            closeInputStreamIfNeeded(streamAndLength.getInputStream());
+            closeInputStreamIfNeeded(is);
         }
     }
 
     public BlobOperationResponse resizePageBlob(final Exchange exchange) {
-        LOG.trace("Resizing a page blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Resizing a page blob [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange), exchange);
+        }
 
         final Long pageSize = getPageBlobSize(exchange);
         final BlobCommonRequestOptions requestOptions = getCommonRequestOptions(exchange);
@@ -397,7 +417,7 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse clearPageBlob(final Exchange exchange) {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final PageRange pageRange = configurationProxy.getPageRange(exchange);
         final BlobCommonRequestOptions requestOptions = getCommonRequestOptions(exchange);
@@ -413,13 +433,15 @@ public class BlobOperations {
     }
 
     public BlobOperationResponse getPageBlobRanges(final Exchange exchange) {
-        ObjectHelper.notNull(exchange, "exchange cannot be null");
+        ObjectHelper.notNull(exchange, MISSING_EXCHANGE);
 
         final BlobRange blobRange = configurationProxy.getBlobRange(exchange);
         final BlobCommonRequestOptions commonRequestOptions = getCommonRequestOptions(exchange);
 
-        LOG.trace("Getting the page blob ranges [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange),
-                exchange);
+        if (LOG.isTraceEnabled()) {
+            LOG.trace("Getting the page blob ranges [{}] from exchange [{}]...", configurationProxy.getBlobName(exchange),
+                    exchange);
+        }
 
         final PagedIterable<PageRangeItem> response
                 = client.getPageBlobRanges(blobRange, commonRequestOptions.getBlobRequestConditions(),
