@@ -26,13 +26,13 @@ import org.apache.camel.CamelContext;
 import org.apache.camel.Endpoint;
 import org.apache.camel.spi.Metadata;
 import org.apache.camel.spi.annotations.Component;
-import org.apache.camel.support.DefaultComponent;
+import org.apache.camel.support.HealthCheckComponent;
 import org.apache.camel.util.ObjectHelper;
 
 @Component("azure-storage-datalake")
-public class DataLakeComponent extends DefaultComponent {
+public class DataLakeComponent extends HealthCheckComponent {
 
-    @Metadata(description = "configuration object for datalake")
+    @Metadata(description = "configuration object for data lake")
     private DataLakeConfiguration configuration = new DataLakeConfiguration();
 
     public DataLakeComponent() {
@@ -45,7 +45,7 @@ public class DataLakeComponent extends DefaultComponent {
     @Override
     protected Endpoint createEndpoint(String uri, String remaining, Map<String, Object> parameters) throws Exception {
 
-        if (remaining == null || remaining.trim().isEmpty()) {
+        if (remaining == null || remaining.isBlank()) {
             throw new IllegalArgumentException("At least the account name must be specified");
         }
 
