@@ -76,12 +76,12 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
             headers.put("CamelBox.email", CAMEL_TEST_USER_EMAIL_ALIAS);
             result = requestBodyAndHeaders("direct://ADDUSEREMAILALIAS", null, headers);
             assertNotNull(result, "addUserEmailAlias result");
-            LOG.debug("addUserEmailAlias: " + result);
+            LOG.debug("addUserEmailAlias: {}", result);
         } finally {
             if (result != null) {
                 try {
                     testUser.deleteEmailAlias(result.getID());
-                } catch (Throwable t) {
+                } catch (Exception t) {
                 }
             }
         }
@@ -107,12 +107,12 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
             result = requestBodyAndHeaders("direct://CREATEAPPUSER", null, headers);
 
             assertNotNull(result, "createAppUser result");
-            LOG.debug("createAppUser: " + result);
+            LOG.debug("createAppUser: {}", result);
         } finally {
             if (result != null) {
                 try {
                     result.delete(false, true);
-                } catch (Throwable t) {
+                } catch (Exception t) {
                 }
             }
         }
@@ -124,7 +124,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
         assumeFalse(jwtAuthentication, "Test has to be executed with standard authentication.");
 
         String enterpriseUser1Login = (String) options.get(CAMEL_TEST_ENTERPRISE_USER_LOGIN_KEY);
-        if (enterpriseUser1Login != null && enterpriseUser1Login.trim().isEmpty()) {
+        if (enterpriseUser1Login != null && enterpriseUser1Login.isBlank()) {
             enterpriseUser1Login = null;
         }
 
@@ -148,12 +148,12 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
             result = requestBodyAndHeaders("direct://CREATEENTERPRISEUSER", null, headers);
 
             assertNotNull(result, "createEnterpriseUser result");
-            LOG.debug("createEnterpriseUser: " + result);
+            LOG.debug("createEnterpriseUser: {}", result);
         } finally {
             if (result != null) {
                 try {
                     result.delete(false, true);
-                } catch (Throwable t) {
+                } catch (Exception t) {
                 }
             }
         }
@@ -216,7 +216,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
         final java.util.List result = requestBodyAndHeaders("direct://GETALLENTERPRISEOREXTERNALUSERS", null, headers);
 
         assertNotNull(result, "getAllEnterpriseOrExternalUsers result");
-        LOG.debug("getAllEnterpriseOrExternalUsers: " + result);
+        LOG.debug("getAllEnterpriseOrExternalUsers: {}", result);
     }
 
     @Test
@@ -224,7 +224,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
         final com.box.sdk.BoxUser result = requestBody("direct://GETCURRENTUSER", testUser.getID());
 
         assertNotNull(result, "getCurrentUser result");
-        LOG.debug("getCurrentUser: " + result);
+        LOG.debug("getCurrentUser: {}", result);
     }
 
     @Test
@@ -234,7 +234,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
         final java.util.Collection result = requestBody("direct://GETUSEREMAILALIAS", testUser.getID());
 
         assertNotNull(result, "getUserEmailAlias result");
-        LOG.debug("getUserEmailAlias: " + result);
+        LOG.debug("getUserEmailAlias: {}", result);
     }
 
     @Test
@@ -243,7 +243,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
         final com.box.sdk.BoxUser.Info result = requestBody("direct://GETUSERINFO", testUser.getID());
 
         assertNotNull(result, "getUserInfo result");
-        LOG.debug("getUserInfo: " + result);
+        LOG.debug("getUserInfo: {}", result);
     }
 
     @Test
@@ -262,7 +262,7 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
             headers.put("CamelBox.info", info);
             final com.box.sdk.BoxUser result = requestBodyAndHeaders("direct://UPDATEUSERINFO", null, headers);
             assertNotNull(result, "updateUserInfo result");
-            LOG.debug("updateUserInfo: " + result);
+            LOG.debug("updateUserInfo: {}", result);
         } finally {
             info = testUser.getInfo();
             info.setJobTitle("");
@@ -277,10 +277,10 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
 
         String enterpriseUser1Login = (String) options.get(CAMEL_TEST_ENTERPRISE_USER_LOGIN_KEY);
         String enterpriseUser2Login = (String) options.get(CAMEL_TEST_ENTERPRISE_USER2_LOGIN_KEY);
-        if (enterpriseUser1Login != null && enterpriseUser1Login.trim().isEmpty()) {
+        if (enterpriseUser1Login != null && enterpriseUser1Login.isBlank()) {
             enterpriseUser1Login = null;
         }
-        if (enterpriseUser2Login != null && enterpriseUser2Login.trim().isEmpty()) {
+        if (enterpriseUser2Login != null && enterpriseUser2Login.isBlank()) {
             enterpriseUser2Login = null;
         }
 
@@ -308,13 +308,13 @@ public class BoxUsersManagerIT extends AbstractBoxITSupport {
             if (user1 != null) {
                 try {
                     user1.getResource().delete(false, true);
-                } catch (Throwable t) {
+                } catch (Exception t) {
                 }
             }
             if (user2 != null) {
                 try {
                     user2.getResource().delete(false, true);
-                } catch (Throwable t) {
+                } catch (Exception t) {
                 }
             }
         }
