@@ -20,69 +20,104 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 
 import io.opentelemetry.api.common.AttributeKey;
+import io.opentelemetry.api.common.Attributes;
+import io.opentelemetry.api.trace.SpanContext;
 import io.opentelemetry.api.trace.Tracer;
 import io.opentelemetry.context.Context;
-import io.opentelemetry.sdk.testing.exporter.InMemorySpanExporter;
-import io.opentelemetry.sdk.trace.ReadWriteSpan;
-import io.opentelemetry.sdk.trace.ReadableSpan;
-import io.opentelemetry.sdk.trace.SdkTracerProvider;
-import io.opentelemetry.sdk.trace.SpanProcessor;
+import io.opentelemetry.sdk.logs.data.LogRecordData;
 import io.opentelemetry.sdk.trace.data.SpanData;
-import io.opentelemetry.sdk.trace.export.SimpleSpanProcessor;
+import org.apache.camel.BindToRegistry;
 import org.apache.camel.CamelContext;
+import org.apache.camel.CamelContextAware;
+import org.apache.camel.spi.InterceptStrategy;
+import org.apache.camel.spi.ThreadPoolFactory;
 import org.apache.camel.test.junit5.CamelTestSupport;
-import org.apache.camel.tracing.SpanDecorator;
+import org.apache.camel.util.ObjectHelper;
+import org.awaitility.Awaitility;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Tags;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junitpioneer.jupiter.SetSystemProperty;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
+@Tags({ @Tag("not-parallel") })
+@SetSystemProperty(key = "io.opentelemetry.context.enableStrictContext", value = "true")
 class CamelOpenTelemetryTestSupport extends CamelTestSupport {
     static final AttributeKey<String> CAMEL_URI_KEY = AttributeKey.stringKey("camel-uri");
     static final AttributeKey<String> COMPONENT_KEY = AttributeKey.stringKey("component");
+    static final AttributeKey<String> CAMEL_SCHEME_KEY = AttributeKey.stringKey("url.scheme");
     static final AttributeKey<String> PRE_KEY = AttributeKey.stringKey("pre");
     static final AttributeKey<String> POST_KEY = AttributeKey.stringKey("post");
     static final AttributeKey<String> MESSAGE_KEY = AttributeKey.stringKey("message");
 
     private static final Logger LOG = LoggerFactory.getLogger(CamelOpenTelemetryTestSupport.class);
 
-    private InMemorySpanExporter inMemorySpanExporter = InMemorySpanExporter.create();
-    private SpanTestData[] expected;
-    private Tracer tracer;
-    private OpenTelemetryTracer ottracer;
-    private SdkTracerProvider tracerFactory;
+    @RegisterExtension
+    public final CamelOpenTelemetryExtension otelExtension = CamelOpenTelemetryExtension.create();
+
+    @BindToRegistry
+    ThreadPoolFactory threadPoolFactory = new OpenTelemetryInstrumentedThreadPoolFactory();
+
+    SpanTestData[] expected;
+    Tracer tracer;
+    OpenTelemetryTracer otTracer;
 
     CamelOpenTelemetryTestSupport(SpanTestData[] expected) {
         this.expected = expected;
     }
 
+    @AfterEach
+    void noLeakingContext() {
+        Assertions.assertSame(Context.root(), Context.current(), "There must be no leaking span after test");
+    }
+
+    protected void initTracer(CamelContext context) {
+        otTracer = new OpenTelemetryTracer();
+        CamelContextAware.trySetCamelContext(otTracer, context);
+
+        tracer = otelExtension.getOpenTelemetry().getTracer("tracerTest");
+        otTracer.setTracer(tracer);
+        otTracer.setExcludePatterns(getExcludePatterns());
+        otTracer.addDecorator(new TestSEDASpanDecorator());
+        if (isTraceProcessor()) {
+            otTracer.setTraceProcessors(true);
+            otTracer.initTracer();
+        } else {
+            otTracer.setTracingStrategy(getTracingStrategy().apply(otTracer));
+        }
+        otTracer.init(context);
+    }
+
     @Override
     protected CamelContext createCamelContext() throws Exception {
         CamelContext context = super.createCamelContext();
-        ottracer = new OpenTelemetryTracer();
-
-        tracerFactory = SdkTracerProvider.builder()
-                .addSpanProcessor(new LoggingSpanProcessor())
-                .addSpanProcessor(SimpleSpanProcessor.create(inMemorySpanExporter)).build();
-
-        tracer = tracerFactory.get("tracerTest");
-        ottracer.setTracer(tracer);
-        ottracer.setExcludePatterns(getExcludePatterns());
-        ottracer.addDecorator(new TestSEDASpanDecorator());
-        ottracer.init(context);
+        initTracer(context);
         return context;
     }
 
-    protected Set<String> getExcludePatterns() {
-        return new HashSet<>();
+    protected boolean isTraceProcessor() {
+        return false;
+    }
+
+    protected String getExcludePatterns() {
+        return null;
+    }
+
+    protected OpenTelemetryTracer getOtTracer() {
+        return otTracer;
     }
 
     protected void verify() {
@@ -94,21 +129,33 @@ class CamelOpenTelemetryTestSupport extends CamelTestSupport {
     }
 
     protected List<SpanData> verify(SpanTestData[] expected, boolean async) {
-        List<SpanData> spans = inMemorySpanExporter.getFinishedSpanItems();
+        List<SpanData> spans = otelExtension.getSpans();
+        SpanTreePrinter.printSpanTree(spans);
         spans.forEach(mockSpan -> {
             LOG.info("Span: {}", mockSpan);
-            LOG.info("Component: {}", mockSpan.getAttributes().get(COMPONENT_KEY));
-            LOG.info("Tags: {}", mockSpan.getAttributes());
-            LOG.info("Logs: ");
-
+            LOG.info("\tComponent: {}", mockSpan.getAttributes().get(COMPONENT_KEY));
+            LOG.info("\tTags: {}", mockSpan.getAttributes());
         });
+
+        List<LogRecordData> logRecords = otelExtension.getLogRecords();
+        if (!logRecords.isEmpty()) {
+            LOG.info("Log records:");
+            logRecords.forEach(logRecord -> {
+                SpanContext spanContext = logRecord.getSpanContext();
+                LOG.info("\tLog: [{},{}] {}", spanContext.getTraceId(), spanContext.getSpanId(), logRecord);
+            });
+        }
+
         assertEquals(expected.length, spans.size(), "Incorrect number of spans");
+        int numberOfLogs = spans.size() * 2;
+        assertEquals(numberOfLogs, logRecords.size(), "Incorrect number of log records");
+
         verifySameTrace();
 
         if (async) {
             final List<SpanData> unsortedSpans = spans;
             spans = Arrays.stream(expected)
-                    .map(td -> findSpan(td, unsortedSpans)).distinct().collect(Collectors.toList());
+                    .map(td -> findSpan(td, unsortedSpans)).distinct().toList();
             assertEquals(expected.length, spans.size(), "Incorrect number of spans after sorting");
         }
 
@@ -123,7 +170,7 @@ class CamelOpenTelemetryTestSupport extends CamelTestSupport {
         return spans.stream().filter(s -> {
             boolean matched = s.getName().equals(testdata.getOperation());
             if (s.getAttributes().get(CAMEL_URI_KEY) != null) {
-                matched = matched && s.getAttributes().get(CAMEL_URI_KEY).equals(testdata.getUri());
+                matched = matched && Objects.equals(s.getAttributes().get(CAMEL_URI_KEY), testdata.getUri());
             }
             matched = matched && s.getKind().equals(testdata.getKind());
             return matched;
@@ -136,14 +183,21 @@ class CamelOpenTelemetryTestSupport extends CamelTestSupport {
 
     protected void verifyTraceSpanNumbers(int numOfTraces, int numSpansPerTrace) {
         Map<String, List<SpanData>> traces = new HashMap<>();
+        Awaitility.await()
+                .alias("inMemorySpanExporter.getFinishedSpanItems() should eventually contain all expected spans")
+                .atMost(5, TimeUnit.SECONDS)
+                .pollInterval(10, TimeUnit.MILLISECONDS)
+                .pollDelay(0, TimeUnit.MILLISECONDS)
+                .until(() -> otelExtension.getSpans().size() >= (numOfTraces * numSpansPerTrace));
 
-        List<SpanData> finishedSpans = inMemorySpanExporter.getFinishedSpanItems();
+        List<SpanData> finishedSpans = otelExtension.getSpans();
         // Sort spans into separate traces
-        for (int i = 0; i < finishedSpans.size(); i++) {
-            List<SpanData> spans = traces.computeIfAbsent(finishedSpans.get(i).getTraceId(), k -> new ArrayList<>());
-            spans.add(finishedSpans.get(i));
+        for (SpanData finishedSpan : finishedSpans) {
+            List<SpanData> spans = traces.computeIfAbsent(finishedSpan.getTraceId(), k -> new ArrayList<>());
+            spans.add(finishedSpan);
         }
 
+        LOG.info("Found traces: {}", traces);
         assertEquals(numOfTraces, traces.size());
 
         for (Map.Entry<String, List<SpanData>> spans : traces.entrySet()) {
@@ -154,22 +208,28 @@ class CamelOpenTelemetryTestSupport extends CamelTestSupport {
     protected void verifySpan(int index, SpanTestData[] testdata, List<SpanData> spans) {
         SpanData span = spans.get(index);
         SpanTestData td = testdata[index];
-
-        String component = span.getAttributes().get(COMPONENT_KEY);
+        Attributes attributes = span.getAttributes();
+        String component = attributes.get(COMPONENT_KEY);
         assertNotNull(component);
 
+        String scheme = attributes.get(CAMEL_SCHEME_KEY);
+
         if (td.getUri() != null) {
-            assertEquals(SpanDecorator.CAMEL_COMPONENT + URI.create(td.getUri()).getScheme(), component, td.getLabel());
+            assertEquals(URI.create(td.getUri()).getScheme(), scheme);
         }
 
         if ("camel-seda".equals(component)) {
-            assertNotNull(span.getAttributes().get(PRE_KEY));
-            assertNotNull(span.getAttributes().get(POST_KEY));
+            assertNotNull(attributes.get(PRE_KEY));
+            assertNotNull(attributes.get(POST_KEY));
         }
 
         assertEquals(td.getOperation(), span.getName(), td.getLabel());
 
         assertEquals(td.getKind(), span.getKind(), td.getLabel());
+
+        if (ObjectHelper.isNotEmpty(td.getTraceId())) {
+            assertEquals(td.getTraceId(), span.getTraceId());
+        }
 
         if (!td.getLogMessages().isEmpty()) {
             assertEquals(td.getLogMessages().size(), span.getEvents().size(), td.getLabel());
@@ -183,39 +243,16 @@ class CamelOpenTelemetryTestSupport extends CamelTestSupport {
         }
         if (!td.getTags().isEmpty()) {
             for (Map.Entry<String, String> entry : td.getTags().entrySet()) {
-                assertEquals(entry.getValue(), span.getAttributes().get(AttributeKey.stringKey(entry.getKey())));
+                assertEquals(entry.getValue(), attributes.get(AttributeKey.stringKey(entry.getKey())));
             }
         }
-
     }
 
     protected void verifySameTrace() {
-        assertEquals(1, inMemorySpanExporter.getFinishedSpanItems().stream().map(s -> s.getTraceId()).distinct().count());
+        assertEquals(1, otelExtension.getSpans().stream().map(SpanData::getTraceId).distinct().count());
     }
 
-    private static class LoggingSpanProcessor implements SpanProcessor {
-        private static final Logger LOG = LoggerFactory.getLogger(LoggingSpanProcessor.class);
-
-        @Override
-        public void onStart(Context context, ReadWriteSpan readWriteSpan) {
-            LOG.debug("Span started: name - '{}', kind - '{}', id - '{}-{}", readWriteSpan.getName(), readWriteSpan.getKind(),
-                    readWriteSpan.getSpanContext().getTraceId(), readWriteSpan.getSpanContext().getSpanId());
-        }
-
-        @Override
-        public boolean isStartRequired() {
-            return true;
-        }
-
-        @Override
-        public void onEnd(ReadableSpan readableSpan) {
-            LOG.debug("Span ended: name - '{}', kind - '{}', id - '{}-{}", readableSpan.getName(), readableSpan.getKind(),
-                    readableSpan.getSpanContext().getTraceId(), readableSpan.getSpanContext().getSpanId());
-        }
-
-        @Override
-        public boolean isEndRequired() {
-            return true;
-        }
+    protected Function<OpenTelemetryTracer, InterceptStrategy> getTracingStrategy() {
+        return openTelemetryTracer -> new NoopTracingStrategy();
     }
 }
