@@ -56,16 +56,16 @@ import org.slf4j.LoggerFactory;
 public abstract class BaseSSLContextParameters extends JsseParameters {
 
     protected static final List<String> DEFAULT_CIPHER_SUITES_FILTER_INCLUDE
-            = Collections.unmodifiableList(Arrays.asList(".*"));
+            = List.of(".*");
 
-    protected static final List<String> DEFAULT_CIPHER_SUITES_FILTER_EXCLUDE = Collections
-            .unmodifiableList(Arrays.asList(".*_NULL_.*", ".*_anon_.*", ".*_EXPORT_.*", ".*_DES_.*", ".*MD5", ".*RC4.*"));
+    protected static final List<String> DEFAULT_CIPHER_SUITES_FILTER_EXCLUDE
+            = List.of(".*_NULL_.*", ".*_anon_.*", ".*_EXPORT_.*", ".*_DES_.*", ".*MD5", ".*RC4.*");
 
     protected static final List<String> DEFAULT_SECURE_SOCKET_PROTOCOLS_FILTER_INCLUDE
-            = Collections.unmodifiableList(Arrays.asList(".*"));
+            = List.of(".*");
 
     protected static final List<String> DEFAULT_SECURE_SOCKET_PROTOCOLS_FILTER_EXCLUDE
-            = Collections.unmodifiableList(Arrays.asList("SSL.*"));
+            = List.of("SSL.*");
 
     private static final Logger LOG = LoggerFactory.getLogger(BaseSSLContextParameters.class);
 
@@ -322,7 +322,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
 
         //////
 
-        Configurer<SSLEngine> sslEngineConfigurer = new Configurer<SSLEngine>() {
+        Configurer<SSLEngine> sslEngineConfigurer = new Configurer<>() {
 
             @Override
             public SSLEngine configure(SSLEngine engine) {
@@ -394,7 +394,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
 
         final List<Configurer<SSLSocket>> sslSocketConfigurers = this.getSSLSocketFactorySSLSocketConfigurers(context);
 
-        Configurer<SSLSocketFactory> sslSocketFactoryConfigurer = new Configurer<SSLSocketFactory>() {
+        Configurer<SSLSocketFactory> sslSocketFactoryConfigurer = new Configurer<>() {
 
             @Override
             public SSLSocketFactory configure(SSLSocketFactory factory) {
@@ -429,7 +429,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
         final List<Configurer<SSLServerSocket>> sslServerSocketConfigurers
                 = this.getSSLServerSocketFactorySSLServerSocketConfigurers(context);
 
-        Configurer<SSLServerSocketFactory> sslServerSocketFactoryConfigurer = new Configurer<SSLServerSocketFactory>() {
+        Configurer<SSLServerSocketFactory> sslServerSocketFactoryConfigurer = new Configurer<>() {
 
             @Override
             public SSLServerSocketFactory configure(SSLServerSocketFactory factory) {
@@ -489,7 +489,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
 
         //////
 
-        Configurer<SSLSocket> sslSocketConfigurer = new Configurer<SSLSocket>() {
+        Configurer<SSLSocket> sslSocketConfigurer = new Configurer<>() {
 
             @Override
             public SSLSocket configure(SSLSocket socket) {
@@ -590,7 +590,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
 
         //////
 
-        Configurer<SSLServerSocket> sslServerSocketConfigurer = new Configurer<SSLServerSocket>() {
+        Configurer<SSLServerSocket> sslServerSocketConfigurer = new Configurer<>() {
 
             @Override
             public SSLServerSocket configure(SSLServerSocket socket) {
@@ -777,7 +777,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
     /**
      * Configures a {@code T} based on the related configuration options.
      */
-    interface Configurer<T> {
+    protected interface Configurer<T> {
 
         /**
          * Configures a {@code T} based on the related configuration options. The return value from this method may be
@@ -886,7 +886,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
             this.context.init(km, tm, random);
         }
 
-        protected SSLContext getDelegate() {
+        private SSLContext getDelegate() {
             return this.context;
         }
 
@@ -898,7 +898,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
          * @param  engine the engine to configure
          * @return        {@code engine} or a decorated instance there of
          */
-        protected SSLEngine configureSSLEngine(SSLEngine engine) {
+        private SSLEngine configureSSLEngine(SSLEngine engine) {
             SSLEngine workingEngine = engine;
 
             for (Configurer<SSLEngine> configurer : this.sslEngineConfigurers) {
@@ -916,7 +916,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
          * @param  factory the factory to configure
          * @return         {@code factory} or a decorated instance there of
          */
-        protected SSLSocketFactory configureSSLSocketFactory(SSLSocketFactory factory) {
+        private SSLSocketFactory configureSSLSocketFactory(SSLSocketFactory factory) {
             SSLSocketFactory workingFactory = factory;
 
             for (Configurer<SSLSocketFactory> configurer : this.sslSocketFactoryConfigurers) {
@@ -934,7 +934,7 @@ public abstract class BaseSSLContextParameters extends JsseParameters {
          * @param  factory the factory to configure
          * @return         {@code factory} or a decorated instance there of
          */
-        protected SSLServerSocketFactory configureSSLServerSocketFactory(
+        private SSLServerSocketFactory configureSSLServerSocketFactory(
                 SSLServerSocketFactory factory) {
             SSLServerSocketFactory workingFactory = factory;
 
