@@ -22,17 +22,32 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import org.apache.camel.CamelContext;
+import org.apache.camel.CamelContextAware;
+import org.apache.camel.util.StringHelper;
+
 /**
  * Source code generate for csimple language.
  *
  * @see CSimpleGeneratedCode
  */
-public class CSimpleCodeGenerator {
+public class CSimpleCodeGenerator implements CamelContextAware {
 
     private static final AtomicInteger UUID = new AtomicInteger();
 
+    private CamelContext camelContext;
     private Set<String> imports = new TreeSet<>();
     private Map<String, String> aliases = new HashMap<>();
+
+    @Override
+    public CamelContext getCamelContext() {
+        return camelContext;
+    }
+
+    @Override
+    public void setCamelContext(CamelContext camelContext) {
+        this.camelContext = camelContext;
+    }
 
     public Set<String> getImports() {
         return imports;
@@ -60,7 +75,7 @@ public class CSimpleCodeGenerator {
 
     private CSimpleGeneratedCode generateCode(String fqn, String script, boolean predicate) {
         String text = script;
-        // text should be single line and trimmed as it can be multi lined
+        // text should be single line and trimmed as it can be multi-lined
         text = text.replaceAll("\n", "");
         text = text.trim();
 
@@ -72,7 +87,7 @@ public class CSimpleCodeGenerator {
         script = alias(script);
 
         //  wrap text into a class method we can call
-        StringBuilder sb = new StringBuilder();
+        StringBuilder sb = new StringBuilder(4096);
         sb.append("package ").append(qn).append(";\n");
         sb.append("\n");
         sb.append("import java.util.*;\n");
@@ -96,6 +111,7 @@ public class CSimpleCodeGenerator {
         sb.append("public class ").append(name).append(" extends org.apache.camel.language.csimple.CSimpleSupport {\n");
         sb.append("\n");
         sb.append("    Language bean;\n");
+        sb.append("    UuidGenerator uuid;\n");
         sb.append("\n");
         sb.append("    public ").append(name).append("() {\n");
         sb.append("    }\n");
@@ -111,7 +127,7 @@ public class CSimpleCodeGenerator {
         sb.append("    public String getText() {\n");
         // \ should be escaped
         String escaped = text.replace("\\", "\\\\");
-        // we need to escape all " so its a single literal string
+        // we need to escape all " so it's a single literal string
         escaped = escaped.replace("\"", "\\\"");
         sb.append("        return \"").append(escaped).append("\";\n");
         sb.append("    }\n");
@@ -121,26 +137,31 @@ public class CSimpleCodeGenerator {
         sb.append(
                 "    public Object evaluate(CamelContext context, Exchange exchange, Message message, Object body) throws Exception {\n");
         sb.append("        ");
-        if (!script.contains("return ")) {
-            sb.append("return ");
-        }
 
         if (predicate) {
             CSimplePredicateParser parser = new CSimplePredicateParser();
-            script = parser.parsePredicate(script);
-            if (script.trim().isEmpty()) {
+            script = parser.parsePredicate(camelContext, script);
+            if (script.isBlank()) {
                 // a predicate that is whitespace is regarded as false
                 script = "false";
             }
         } else {
             CSimpleExpressionParser parser = new CSimpleExpressionParser();
-            script = parser.parseExpression(script);
-            if (script.trim().isEmpty()) {
-                // an expression can be whitespace but then we need to wrap this in quotes
+            script = parser.parseExpression(camelContext, script);
+            if (script.isBlank()) {
+                // an expression can be whitespace, but then we need to wrap this in quotes
                 script = "\"" + script + "\"";
             }
         }
+        String uuid = null;
+        if (script.startsWith("    UuidGenerator uuid")) {
+            uuid = StringHelper.before(script, "\n") + "\n";
+            script = StringHelper.after(script, "\n");
+        }
 
+        if (!script.contains("return ")) {
+            sb.append("return ");
+        }
         sb.append(script);
         if (!script.endsWith("}") && !script.endsWith(";")) {
             sb.append(";");
@@ -161,7 +182,12 @@ public class CSimpleCodeGenerator {
         sb.append("}\n");
         sb.append("\n");
 
-        return new CSimpleGeneratedCode(qn + "." + name, sb.toString());
+        String code = sb.toString();
+        if (uuid != null) {
+            code = code.replace("    UuidGenerator uuid;\n", uuid);
+        }
+
+        return new CSimpleGeneratedCode(qn + "." + name, code);
     }
 
     private String alias(String script) {
