@@ -16,14 +16,11 @@
  */
 package org.apache.camel.management.mbean;
 
-import java.io.PrintWriter;
-import java.io.StringWriter;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 
 import javax.management.openmbean.CompositeData;
 import javax.management.openmbean.CompositeDataSupport;
@@ -38,6 +35,7 @@ import org.apache.camel.api.management.ManagedResource;
 import org.apache.camel.api.management.mbean.CamelOpenMBeanTypes;
 import org.apache.camel.api.management.mbean.ManagedSupervisingRouteControllerMBean;
 import org.apache.camel.spi.SupervisingRouteController;
+import org.apache.camel.support.ExceptionHelper;
 import org.apache.camel.util.TimeUtils;
 import org.apache.camel.util.backoff.BackOffTimer;
 
@@ -106,6 +104,26 @@ public class ManagedSupervisingRouteController extends ManagedService implements
     }
 
     @Override
+    public boolean isUnhealthyOnExhausted() {
+        return controller.isUnhealthyOnExhausted();
+    }
+
+    @Override
+    public boolean isUnhealthyOnRestarting() {
+        return controller.isUnhealthyOnRestarting();
+    }
+
+    @Override
+    public boolean isStartingRoutes() {
+        return controller.isStartingRoutes();
+    }
+
+    @Override
+    public boolean isHasUnhealthyRoutes() {
+        return controller.hasUnhealthyRoutes();
+    }
+
+    @Override
     public int getNumberOfControlledRoutes() {
         return controller.getControlledRoutes().size();
     }
@@ -125,7 +143,7 @@ public class ManagedSupervisingRouteController extends ManagedService implements
         if (controller != null) {
             return controller.getControlledRoutes().stream()
                     .map(Route::getId)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return Collections.emptyList();
@@ -145,7 +163,7 @@ public class ManagedSupervisingRouteController extends ManagedService implements
         if (controller != null) {
             return controller.getRestartingRoutes().stream()
                     .map(Route::getId)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return Collections.emptyList();
@@ -156,7 +174,7 @@ public class ManagedSupervisingRouteController extends ManagedService implements
         if (controller != null) {
             return controller.getExhaustedRoutes().stream()
                     .map(Route::getId)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return Collections.emptyList();
@@ -205,10 +223,7 @@ public class ManagedSupervisingRouteController extends ManagedService implements
                 if (cause != null) {
                     error = cause.getMessage();
                     if (includeStacktrace) {
-                        StringWriter writer = new StringWriter();
-                        cause.printStackTrace(new PrintWriter(writer));
-                        writer.flush();
-                        stacktrace = writer.toString();
+                        stacktrace = ExceptionHelper.stackTraceToString(cause);
                     }
                 }
 
@@ -227,5 +242,10 @@ public class ManagedSupervisingRouteController extends ManagedService implements
         } catch (Exception e) {
             throw RuntimeCamelException.wrapRuntimeCamelException(e);
         }
+    }
+
+    @Override
+    public void startRoutes() {
+        controller.startRoutes();
     }
 }
