@@ -16,76 +16,90 @@
  */
 package org.apache.camel.dsl.jbang.core.commands;
 
-import java.awt.*;
+import java.awt.Toolkit;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.DataFlavor;
 import java.awt.datatransfer.UnsupportedFlavorException;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Properties;
-import java.util.Set;
-import java.util.Stack;
-import java.util.StringJoiner;
+import java.util.*;
 import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.apicurio.datamodels.Library;
-import io.apicurio.datamodels.openapi.models.OasDocument;
-import org.apache.camel.CamelContext;
+import org.apache.camel.FailedToCreateRouteException;
+import org.apache.camel.catalog.CamelCatalog;
 import org.apache.camel.catalog.DefaultCamelCatalog;
+import org.apache.camel.dsl.jbang.core.common.CommandLineHelper;
 import org.apache.camel.dsl.jbang.core.common.LoggingLevelCompletionCandidates;
+import org.apache.camel.dsl.jbang.core.common.Printer;
+import org.apache.camel.dsl.jbang.core.common.RuntimeCompletionCandidates;
+import org.apache.camel.dsl.jbang.core.common.RuntimeType;
+import org.apache.camel.dsl.jbang.core.common.RuntimeTypeConverter;
 import org.apache.camel.dsl.jbang.core.common.RuntimeUtil;
+import org.apache.camel.dsl.jbang.core.common.Source;
+import org.apache.camel.dsl.jbang.core.common.SourceHelper;
+import org.apache.camel.dsl.jbang.core.common.SourceScheme;
 import org.apache.camel.dsl.jbang.core.common.VersionHelper;
-import org.apache.camel.generator.openapi.RestDslGenerator;
-import org.apache.camel.impl.lw.LightweightCamelContext;
 import org.apache.camel.main.KameletMain;
 import org.apache.camel.main.download.DownloadListener;
+import org.apache.camel.spi.BacklogDebugger;
 import org.apache.camel.support.ResourceHelper;
+import org.apache.camel.util.AntPathMatcher;
 import org.apache.camel.util.CamelCaseOrderedProperties;
 import org.apache.camel.util.FileUtil;
 import org.apache.camel.util.IOHelper;
 import org.apache.camel.util.ObjectHelper;
+import org.apache.camel.util.StopWatch;
 import org.apache.camel.util.StringHelper;
-import org.apache.logging.log4j.Level;
-import org.apache.logging.log4j.core.config.Configurator;
+import org.apache.camel.util.json.JsonObject;
+import org.apache.camel.util.json.Jsoner;
+import org.apache.camel.xml.io.util.XmlStreamDetector;
+import org.apache.camel.xml.io.util.XmlStreamInfo;
 import picocli.CommandLine;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
 import picocli.CommandLine.Parameters;
 
+import static org.apache.camel.dsl.jbang.core.common.CamelCommandHelper.CAMEL_INSTANCE_TYPE;
+import static org.apache.camel.dsl.jbang.core.common.CamelCommandHelper.extractState;
 import static org.apache.camel.dsl.jbang.core.common.GistHelper.asGistSingleUrl;
 import static org.apache.camel.dsl.jbang.core.common.GistHelper.fetchGistUrls;
 import static org.apache.camel.dsl.jbang.core.common.GitHubHelper.asGithubSingleUrl;
 import static org.apache.camel.dsl.jbang.core.common.GitHubHelper.fetchGithubUrls;
 
-@Command(name = "run", description = "Run as local Camel integration")
+@Command(name = "run", description = "Run as local Camel integration", sortOptions = false, showDefaultValues = true)
 public class Run extends CamelCommand {
 
-    public static final String WORK_DIR = ".camel-jbang";
     public static final String RUN_SETTINGS_FILE = "camel-jbang-run.properties";
+    private static final String RUN_PLATFORM_DIR = ".camel-jbang-run";
 
-    private static final String[] ACCEPTED_FILE_EXT
-            = new String[] { "java", "groovy", "js", "jsh", "kts", "xml", "yaml" };
+    private static final String[] ACCEPTED_XML_ROOT_ELEMENT_NAMES = new String[] {
+            "route", "routes",
+            "routeTemplate", "routeTemplates",
+            "templatedRoute", "templatedRoutes",
+            "rest", "rests",
+            "routeConfiguration",
+            "beans", "blueprint", "camel"
+    };
 
-    private static final String OPENAPI_GENERATED_FILE = ".camel-jbang/generated-openapi.yaml";
-    private static final String CLIPBOARD_GENERATED_FILE = ".camel-jbang/generated-clipboard";
+    private static final Set<String> ACCEPTED_XML_ROOT_ELEMENTS
+            = new HashSet<>(Arrays.asList(ACCEPTED_XML_ROOT_ELEMENT_NAMES));
+
+    private static final String OPENAPI_GENERATED_FILE = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/generated-openapi.yaml";
+    private static final String CLIPBOARD_GENERATED_FILE = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/generated-clipboard";
 
     private static final Pattern PACKAGE_PATTERN = Pattern.compile(
             "^\\s*package\\s+([a-zA-Z][.\\w]*)\\s*;.*$", Pattern.MULTILINE);
@@ -93,56 +107,125 @@ public class Run extends CamelCommand {
     private static final Pattern CLASS_PATTERN = Pattern.compile(
             "^\\s*public class\\s+([a-zA-Z0-9]*)[\\s+|;].*$", Pattern.MULTILINE);
 
-    private boolean silentRun;
-    private boolean pipeRun;
+    public boolean exportRun;
+    boolean scriptRun;
+    boolean transformRun;
+    boolean transformMessageRun;
+    boolean debugRun;
 
     private File logFile;
+    public long spawnPid;
 
-    //CHECKSTYLE:OFF
+    private Printer quietPrinter;
+
     @Parameters(description = "The Camel file(s) to run. If no files specified then application.properties is used as source for which files to run.",
-            arity = "0..9", paramLabel = "<files>", parameterConsumer = FilesConsumer.class)
+                arity = "0..9", paramLabel = "<files>", parameterConsumer = FilesConsumer.class)
     Path[] filePaths; // Defined only for file path completion; the field never used
 
-    List<String> files = new ArrayList<>();
+    public List<String> files = new ArrayList<>();
+
+    @Option(names = { "--runtime" },
+            completionCandidates = RuntimeCompletionCandidates.class,
+            defaultValue = "camel-main",
+            converter = RuntimeTypeConverter.class,
+            description = "Runtime (${COMPLETION-CANDIDATES})")
+    RuntimeType runtime = RuntimeType.main;
+
+    @Option(names = { "--source-dir" },
+            description = "Source directory for dynamically loading Camel file(s) to run. When using this, then files cannot be specified at the same time.")
+    String sourceDir;
 
     @Option(names = { "--background" }, defaultValue = "false", description = "Run in the background")
-    boolean background;
+    public boolean background;
+
+    @Option(names = { "--background-wait" }, defaultValue = "true",
+            description = "To wait for run in background to startup successfully, before returning")
+    public boolean backgroundWait = true;
+
+    @Option(names = { "--empty" }, defaultValue = "false", description = "Run an empty Camel without loading source files")
+    public boolean empty;
 
     @Option(names = { "--camel-version" }, description = "To run using a different Camel version than the default version.")
     String camelVersion;
 
-    @Option(names = { "--profile" }, scope = CommandLine.ScopeType.INHERIT, defaultValue = "application",
-            description = "Profile to use, which refers to loading properties file with the given profile name. By default application.properties is loaded.")
-    String profile;
+    @Option(names = { "--camel-spring-boot-version" },
+            description = "To run using a different Camel Spring Boot version than the default version.")
+    String camelSpringBootVersion;
 
-    @Option(names = {
-            "--dep", "--deps" }, description = "Add additional dependencies (Use commas to separate multiple dependencies)")
-    String dependencies;
+    @Option(names = { "--kamelets-version" }, description = "Apache Camel Kamelets version")
+    String kameletsVersion;
 
-    @Option(names = { "--repos" }, description = "Additional maven repositories for download on-demand (Use commas to separate multiple repositories)")
-    String repos;
+    @CommandLine.Option(names = { "--quarkus-group-id" }, description = "Quarkus Platform Maven groupId",
+                        defaultValue = "io.quarkus.platform")
+    String quarkusGroupId = "io.quarkus.platform";
 
-    @Option(names = { "--maven-settings" }, description = "Optional location of maven setting.xml file to configure servers, repositories, mirrors and proxies." +
-            " If set to \"false\", not even the default ~/.m2/settings.xml will be used.")
+    @CommandLine.Option(names = { "--quarkus-artifact-id" }, description = "Quarkus Platform Maven artifactId",
+                        defaultValue = "quarkus-bom")
+    String quarkusArtifactId = "quarkus-bom";
+
+    @Option(names = { "--quarkus-version" }, description = "Quarkus Platform version",
+            defaultValue = RuntimeType.QUARKUS_VERSION)
+    String quarkusVersion = RuntimeType.QUARKUS_VERSION;
+
+    @Option(names = { "--spring-boot-version" }, description = "Spring Boot version",
+            defaultValue = RuntimeType.SPRING_BOOT_VERSION)
+    String springBootVersion = RuntimeType.SPRING_BOOT_VERSION;
+
+    @Option(names = { "--profile" }, scope = CommandLine.ScopeType.INHERIT, defaultValue = "dev",
+            description = "Profile to run (dev, test, or prod).")
+    String profile = "dev";
+
+    @Option(names = { "--dep", "--dependency" }, description = "Add additional dependencies",
+            split = ",")
+    List<String> dependencies = new ArrayList<>();
+
+    @CommandLine.Option(names = { "--repos" },
+                        description = "Additional maven repositories (Use commas to separate multiple repositories)")
+    String repositories;
+
+    @Option(names = { "--gav" }, description = "The Maven group:artifact:version (used during exporting)")
+    String gav;
+
+    @Option(names = { "--maven-settings" },
+            description = "Optional location of Maven settings.xml file to configure servers, repositories, mirrors and proxies."
+                          + " If set to \"false\", not even the default ~/.m2/settings.xml will be used.")
     String mavenSettings;
 
-    @Option(names = { "--maven-settings-security" }, description = "Optional location of maven settings-security.xml file to decrypt settings.xml")
+    @Option(names = { "--maven-settings-security" },
+            description = "Optional location of Maven settings-security.xml file to decrypt settings.xml")
     String mavenSettingsSecurity;
+
+    @Option(names = { "--maven-central-enabled" },
+            description = "Whether downloading JARs from Maven Central repository is enabled")
+    boolean mavenCentralEnabled = true;
+
+    @Option(names = { "--maven-apache-snapshot-enabled" },
+            description = "Whether downloading JARs from ASF Maven Snapshot repository is enabled")
+    boolean mavenApacheSnapshotEnabled = true;
 
     @Option(names = { "--fresh" }, description = "Make sure we use fresh (i.e. non-cached) resources")
     boolean fresh;
 
-    @Option(names = { "--download" }, defaultValue = "true", description = "Whether to allow automatic downloading JAR dependencies (over the internet)")
+    @Option(names = { "--download" }, defaultValue = "true",
+            description = "Whether to allow automatic downloading JAR dependencies (over the internet)")
     boolean download = true;
+
+    @Option(names = { "--jvm-debug" }, parameterConsumer = DebugConsumer.class, paramLabel = "<true|false|port>",
+            description = "To enable JVM remote debugging on port 4004 by default. The supported values are true to " +
+                          "enable the remote debugging, false to disable the remote debugging or a number to use a custom port")
+    int jvmDebugPort;
 
     @Option(names = { "--name" }, defaultValue = "CamelJBang", description = "The name of the Camel application")
     String name;
+
+    @CommandLine.Option(names = { "--exclude" }, description = "Exclude files by name or pattern")
+    List<String> excludes = new ArrayList<>();
 
     @Option(names = { "--logging" }, defaultValue = "true", description = "Can be used to turn off logging")
     boolean logging = true;
 
     @Option(names = { "--logging-level" }, completionCandidates = LoggingLevelCompletionCandidates.class,
-            defaultValue = "info", description = "Logging level")
+            defaultValue = "info", description = "Logging level (${COMPLETION-CANDIDATES})")
     String loggingLevel;
 
     @Option(names = { "--logging-color" }, defaultValue = "true", description = "Use colored logging")
@@ -150,6 +233,12 @@ public class Run extends CamelCommand {
 
     @Option(names = { "--logging-json" }, description = "Use JSON logging (ECS Layout)")
     boolean loggingJson;
+
+    @Option(names = { "--logging-config-path" }, description = "Path to file with custom logging configuration")
+    String loggingConfigPath;
+
+    @Option(names = { "--logging-category" }, description = "Used for individual logging levels (ex: org.apache.kafka=DEBUG)")
+    List<String> loggingCategory = new ArrayList<>();
 
     @Option(names = { "--max-messages" }, defaultValue = "0", description = "Max number of messages to process before stopping")
     int maxMessages;
@@ -169,11 +258,16 @@ public class Run extends CamelCommand {
     boolean trace;
 
     @Option(names = { "--properties" },
-            description = "Load properties file for route placeholders (ex. /path/to/file.properties")
+            description = "comma separated list of properties file" +
+                          " (ex. /path/to/file.properties,/path/to/other.properties")
     String propertiesFiles;
 
-    @Option(names = { "-p", "--prop", "--property" }, description = "Additional properties (override existing)", arity = "0")
+    @Option(names = { "--prop", "--property" }, description = "Additional properties (override existing)", arity = "0")
     String[] property;
+
+    @Option(names = { "--stub" }, description = "Stubs all the matching endpoint with the given component name or pattern."
+                                                + " Multiple names can be separated by comma. (all = everything).")
+    String stub;
 
     @Option(names = { "--jfr" },
             description = "Enables Java Flight Recorder saving recording to disk on exit")
@@ -187,7 +281,7 @@ public class Run extends CamelCommand {
             description = "Local directory (or github link) for loading Kamelets (takes precedence). Multiple directories can be specified separated by comma.")
     String localKameletDir;
 
-    @Option(names = { "--port" }, description = "Embeds a local HTTP server on this port")
+    @Option(names = { "--port" }, description = "Embeds a local HTTP server on this port", defaultValue = "8080")
     int port;
 
     @Option(names = { "--console" }, description = "Developer console at /q/dev on local HTTP server (port 8080 by default)")
@@ -196,49 +290,101 @@ public class Run extends CamelCommand {
     @Option(names = { "--health" }, description = "Health check at /q/health on local HTTP server (port 8080 by default)")
     boolean health;
 
-    @Option(names = { "--modeline" }, defaultValue = "true", description = "Enables Camel-K style modeline")
+    @Option(names = { "--metrics" },
+            description = "Metrics (Micrometer and Prometheus) at /q/metrics on local HTTP server (port 8080 by default)")
+    boolean metrics;
+
+    @Option(names = { "--modeline" }, defaultValue = "true",
+            description = "Deprecated, to be removed: Enables Camel-K style modeline")
     boolean modeline = true;
 
-    @Option(names = { "--open-api" }, description = "Adds an OpenAPI spec from the given file")
+    @Option(names = { "--open-api" }, description = "Adds an OpenAPI spec from the given file (json or yaml file)")
     String openapi;
 
-    @Option(names = { "--code" }, description = "Run the given string as Java DSL route")
+    @Option(names = { "--code" }, description = "Run the given text or file as Java DSL routes")
     String code;
+
+    @Option(names = { "--verbose" }, description = "Verbose output of startup activity (dependency resolution and downloading")
+    boolean verbose;
+
+    @Option(names = { "--ignore-loading-error" },
+            description = "Whether to ignore route loading and compilation errors (use this with care!)")
+    protected boolean ignoreLoadingError;
+
+    @Option(names = { "--lazy-bean" },
+            description = "Whether to use lazy bean initialization (can help with complex classloading issues")
+    protected boolean lazyBean;
+
+    @Option(names = { "--prompt" },
+            description = "Allow user to type in required parameters in prompt if not present in application")
+    boolean prompt;
 
     public Run(CamelJBangMain main) {
         super(main);
     }
 
-    //CHECKSTYLE:ON
-
-    public String getProfile() {
-        return profile;
-    }
-
     @Override
     public boolean disarrangeLogging() {
+        if (RuntimeType.quarkus == runtime) {
+            return true;
+        } else if (RuntimeType.springBoot == runtime) {
+            return true;
+        }
         return false;
     }
 
     @Override
     public Integer doCall() throws Exception {
-        if (!silentRun) {
+        if (!exportRun) {
             printConfigurationValues("Running integration with the following configuration:");
         }
         // run
         return run();
     }
 
-    protected Integer runSilent() throws Exception {
+    public Integer runExport() throws Exception {
+        return runExport(false);
+    }
+
+    protected Integer runExport(boolean ignoreLoadingError) throws Exception {
         // just boot silently and exit
-        silentRun = true;
+        this.exportRun = true;
+        this.ignoreLoadingError = ignoreLoadingError;
         return run();
     }
 
-    protected Integer runPipe(String file) throws Exception {
-        this.files.add(file);
-        pipeRun = true;
+    protected Integer runTransform(boolean ignoreLoadingError) throws Exception {
+        // just boot silently and exit
+        this.transformRun = true;
+        this.ignoreLoadingError = ignoreLoadingError;
+        this.name = "transform";
         return run();
+    }
+
+    public Integer runTransformMessage(String camelVersion) throws Exception {
+        // just boot silently an empty camel in the background and exit
+        this.transformMessageRun = true;
+        this.background = true;
+        this.camelVersion = camelVersion;
+        this.empty = true;
+        this.ignoreLoadingError = true;
+        this.name = "transform";
+        return run();
+    }
+
+    protected Integer runScript(String file) throws Exception {
+        this.files.add(file);
+        this.scriptRun = true;
+        return run();
+    }
+
+    protected Integer runDebug() throws Exception {
+        this.debugRun = true;
+        return run();
+    }
+
+    private boolean isDebugMode() {
+        return jvmDebugPort > 0;
     }
 
     private void writeSetting(KameletMain main, Properties existing, String key, String value) {
@@ -281,38 +427,98 @@ public class Run extends CamelCommand {
     }
 
     private int run() throws Exception {
-        File work = new File(WORK_DIR);
-        removeDir(work);
-        work.mkdirs();
+        if (!empty && !files.isEmpty() && sourceDir != null) {
+            // cannot have both files and source dir at the same time
+            printer().printErr("Cannot specify both file(s) and source-dir at the same time.");
+            return 1;
+        }
 
-        Properties profileProperties = loadProfileProperties();
+        // special if user type: camel run .
+        if (sourceDir == null && (files != null && files.size() == 1 && ".".equals(files.get(0)))) {
+            files.clear();
+            File[] fs = new File(".").listFiles();
+            if (fs != null && fs.length > 0) {
+                for (File f : fs) {
+                    // skip hidden files
+                    if (f.isFile() && !f.isHidden()) {
+                        files.add(f.getName());
+                    }
+                }
+            }
+        }
+
+        if (RuntimeType.quarkus == runtime) {
+            return runQuarkus();
+        } else if (RuntimeType.springBoot == runtime) {
+            return runSpringBoot();
+        }
+
+        File work = CommandLineHelper.getWorkDir();
+        removeDir(work);
+        if (!work.exists() && !work.mkdirs()) {
+            printer().println("WARN: Failed to create working directory: " + work.getAbsolutePath());
+        }
+
+        Properties profileProperties = !empty ? loadProfileProperties() : null;
         configureLogging();
         if (openapi != null) {
             generateOpenApi();
         }
 
         // route code as option
-        if (code != null) {
+        if (!empty && code != null) {
+            // code may refer to an existing file
+            String name = "CodeRoute";
+            boolean file = false;
+            File f = new File(code);
+            if (f.isFile() && f.exists()) {
+                // must be a java file
+                boolean java = f.getName().endsWith(".java");
+                if (!java) {
+                    printer().printErr("Only java source files is accepted when using --code parameter");
+                    return 1;
+                }
+                code = Files.readString(f.toPath());
+                name = FileUtil.onlyName(f.getName());
+                file = true;
+            }
             // store code in temporary file
-            String codeFile = loadFromCode(code);
+            String codeFile = loadFromCode(code, name, file);
             // use code as first file
             files.add(0, codeFile);
         }
 
         // if no specific file to run then try to auto-detect
-        if (files.isEmpty()) {
-            String routes = profileProperties != null ? profileProperties.getProperty("camel.main.routesIncludePattern") : null;
-            if (routes == null) {
-                if (!silentRun) {
-                    System.out
-                            .println("Cannot run because " + getProfile()
-                                     + ".properties file does not exist or camel.main.routesIncludePattern is not configured");
-                    return 1;
-                } else {
-                    // silent-run then auto-detect all files (except properties as they are loaded explicit or via profile)
-                    String[] allFiles = new File(".").list((dir, name) -> !name.endsWith(".properties"));
-                    if (allFiles != null) {
-                        files.addAll(Arrays.asList(allFiles));
+        if (!empty && files.isEmpty()) {
+            if (sourceDir != null) {
+                // silent-run then auto-detect all initial files for source-dir
+                String[] allFiles = new File(sourceDir).list();
+                if (allFiles != null) {
+                    for (String f : allFiles) {
+                        files.add(sourceDir + File.separator + f);
+                    }
+                }
+            } else {
+                String routes
+                        = profileProperties != null ? profileProperties.getProperty("camel.main.routesIncludePattern") : null;
+                if (routes == null) {
+                    if (!exportRun) {
+                        String run = "run";
+                        if (transformRun) {
+                            run = "transform";
+                        } else if (debugRun) {
+                            run = "debug";
+                        }
+                        System.err
+                                .println("Cannot " + run
+                                         + " because application.properties file does not exist or camel.main.routesIncludePattern is not configured");
+                        return 1;
+                    } else {
+                        // silent-run then auto-detect all files
+                        String[] allFiles = new File(".").list();
+                        if (allFiles != null) {
+                            files.addAll(Arrays.asList(allFiles));
+                        }
                     }
                 }
             }
@@ -323,19 +529,46 @@ public class Run extends CamelCommand {
         }
 
         final KameletMain main = createMainInstance();
-        main.setRepos(repos);
+        main.setProfile(profile);
+        if (repositories != null && !repositories.isBlank()) {
+            main.setRepositories(String.join(",", repositories));
+        }
         main.setDownload(download);
         main.setFresh(fresh);
         main.setMavenSettings(mavenSettings);
         main.setMavenSettingsSecurity(mavenSettingsSecurity);
+        main.setMavenCentralEnabled(mavenCentralEnabled);
+        main.setMavenApacheSnapshotEnabled(mavenApacheSnapshotEnabled);
         main.setDownloadListener(new RunDownloadListener());
         main.setAppName("Apache Camel (JBang)");
 
-        writeSetting(main, profileProperties, "camel.main.sourceLocationEnabled", "true");
+        if (stub != null) {
+            if ("all".equals(stub)) {
+                stub = "*";
+            }
+            // we need to match by wildcard, to make it easier
+            StringJoiner sj = new StringJoiner(",");
+            for (String n : stub.split(",")) {
+                // you can either refer to a name or a specific endpoint
+                // if there is a colon then we assume its a specific endpoint then we should not add wildcard
+                boolean colon = n.contains(":");
+                if (!colon && !n.endsWith("*")) {
+                    n = n + "*";
+                }
+                sj.add(n);
+            }
+            stub = sj.toString();
+            writeSetting(main, profileProperties, "camel.jbang.stub", stub);
+            main.setStubPattern(stub);
+        }
+
         if (dev) {
             writeSetting(main, profileProperties, "camel.main.routesReloadEnabled", "true");
             // allow quick shutdown during development
             writeSetting(main, profileProperties, "camel.main.shutdownTimeout", "5");
+        }
+        if (sourceDir != null) {
+            writeSetting(main, profileProperties, "camel.jbang.sourceDir", sourceDir);
         }
         if (trace) {
             writeSetting(main, profileProperties, "camel.main.tracing", "true");
@@ -343,24 +576,35 @@ public class Run extends CamelCommand {
         if (modeline) {
             writeSetting(main, profileProperties, "camel.main.modeline", "true");
         }
+        if (ignoreLoadingError) {
+            writeSetting(main, profileProperties, "camel.jbang.ignoreLoadingError", "true");
+        }
+        if (lazyBean) {
+            writeSetting(main, profileProperties, "camel.jbang.lazyBean", "true");
+        }
+        if (prompt) {
+            writeSetting(main, profileProperties, "camel.jbang.prompt", "true");
+        }
+        writeSetting(main, profileProperties, "camel.jbang.compileWorkDir",
+                CommandLineHelper.CAMEL_JBANG_WORK_DIR + File.separator + "compile");
+
+        if (gav != null) {
+            writeSetting(main, profileProperties, "camel.jbang.gav", gav);
+        }
         writeSetting(main, profileProperties, "camel.jbang.open-api", openapi);
-        writeSetting(main, profileProperties, "camel.jbang.repos", repos);
+        if (repositories != null) {
+            writeSetting(main, profileProperties, "camel.jbang.repos", String.join(",", repositories));
+        }
         writeSetting(main, profileProperties, "camel.jbang.health", health ? "true" : "false");
+        writeSetting(main, profileProperties, "camel.jbang.metrics", metrics ? "true" : "false");
         writeSetting(main, profileProperties, "camel.jbang.console", console ? "true" : "false");
-        writeSetting(main, profileProperties, "camel.jbang.backlogTracing", "true");
+        writeSetting(main, profileProperties, "camel.jbang.verbose", verbose ? "true" : "false");
         // the runtime version of Camel is what is loaded via the catalog
         writeSetting(main, profileProperties, "camel.jbang.camel-version", new DefaultCamelCatalog().getCatalogVersion());
-        // merge existing dependencies with --deps
-        String deps = RuntimeUtil.getDependencies(profileProperties);
-        if (deps.isBlank()) {
-            deps = dependencies != null ? dependencies : "";
-        } else if (dependencies != null && !dependencies.equals(deps)) {
-            deps += "," + dependencies;
-        }
-        if (!deps.isBlank()) {
-            main.addInitialProperty("camel.jbang.dependencies", deps);
-            writeSettings("camel.jbang.dependencies", deps);
-        }
+        writeSetting(main, profileProperties, "camel.jbang.springBootVersion", springBootVersion);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusVersion", quarkusVersion);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusGroupId", quarkusGroupId);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusArtifactId", quarkusArtifactId);
 
         // command line arguments
         if (property != null) {
@@ -374,16 +618,33 @@ public class Run extends CamelCommand {
             }
         }
 
-        if (silentRun) {
+        if (exportRun) {
+            main.setSilent(true);
+            main.addInitialProperty("camel.jbang.export", "true");
             // enable stub in silent mode so we do not use real components
-            main.setStub(true);
+            main.setStubPattern("*");
             // do not run for very long in silent run
             main.addInitialProperty("camel.main.autoStartup", "false");
             main.addInitialProperty("camel.main.durationMaxSeconds", "1");
-        } else if (pipeRun) {
+        } else if (debugRun) {
+            main.addInitialProperty("camel.jbang.debug", "true");
+        } else if (transformRun) {
+            main.setSilent(true);
+            // enable stub in silent mode so we do not use real components
+            main.setStubPattern("*");
+            // do not run for very long in silent run
+            main.addInitialProperty("camel.main.autoStartup", "false");
+            main.addInitialProperty("camel.main.durationMaxSeconds", "1");
+        } else if (transformMessageRun) {
+            // do not start any routes
+            main.addInitialProperty("camel.main.autoStartup", "false");
+        } else if (scriptRun) {
             // auto terminate if being idle
             main.addInitialProperty("camel.main.durationMaxIdleSeconds", "1");
         }
+        // any custom initial property
+        doAddInitialProperty(main);
+
         writeSetting(main, profileProperties, "camel.main.durationMaxMessages",
                 () -> maxMessages > 0 ? String.valueOf(maxMessages) : null);
         writeSetting(main, profileProperties, "camel.main.durationMaxSeconds",
@@ -391,24 +652,52 @@ public class Run extends CamelCommand {
         writeSetting(main, profileProperties, "camel.main.durationMaxIdleSeconds",
                 () -> maxIdleSeconds > 0 ? String.valueOf(maxIdleSeconds) : null);
         writeSetting(main, profileProperties, "camel.jbang.platform-http.port",
-                () -> port > 0 ? String.valueOf(port) : null);
+                () -> port > 0 && port != 8080 ? String.valueOf(port) : null);
         writeSetting(main, profileProperties, "camel.jbang.jfr", jfr || jfrProfile != null ? "jfr" : null); // TODO: "true" instead of "jfr" ?
         writeSetting(main, profileProperties, "camel.jbang.jfr-profile", jfrProfile != null ? jfrProfile : null);
+
+        writeSetting(main, profileProperties, "camel.jbang.kameletsVersion", kameletsVersion);
 
         StringJoiner js = new StringJoiner(",");
         StringJoiner sjReload = new StringJoiner(",");
         StringJoiner sjClasspathFiles = new StringJoiner(",");
         StringJoiner sjKamelets = new StringJoiner(",");
+        StringJoiner sjJKubeFiles = new StringJoiner(",");
 
         // include generated openapi to files to run
         if (openapi != null) {
             files.add(OPENAPI_GENERATED_FILE);
         }
 
+        // if we only run pom.xml/build.gradle then auto discover from the Maven/Gradle based project
+        if (files.size() == 1 && ("pom.xml".equals(files.get(0)) || "build.gradle".equals(files.get(0)))) {
+            // use a better name when running
+            if (name == null || "CamelJBang".equals(name)) {
+                name = RunHelper.mavenArtifactId();
+            }
+            // find source files
+            files = RunHelper.scanMavenOrGradleProject();
+            // include extra dependencies from pom.xml
+            var pomDependencies = RunHelper.scanMavenDependenciesFromPom();
+            addDependencies(pomDependencies.toArray(new String[0]));
+        }
+
+        if (profile != null) {
+            // need to include profile application properties if exists
+            String name = "application-" + profile + ".properties";
+            if (new File(name).exists() && !files.contains(name)) {
+                files.add(name);
+            }
+        }
+
         for (String file : files) {
             if (file.startsWith("clipboard") && !(new File(file).exists())) {
                 file = loadFromClipboard(file);
             } else if (skipFile(file)) {
+                continue;
+            } else if (jkubeFile(file)) {
+                // jkube
+                sjJKubeFiles.add(file);
                 continue;
             } else if (!knownFile(file) && !file.endsWith(".properties")) {
                 // non known files to be added on classpath
@@ -420,17 +709,19 @@ public class Run extends CamelCommand {
 
             // check for properties files
             if (file.endsWith(".properties")) {
-                if (!ResourceHelper.hasScheme(file) && !file.startsWith("github:")) {
-                    file = "file:" + file;
-                }
-                if (ObjectHelper.isEmpty(propertiesFiles)) {
-                    propertiesFiles = file;
-                } else {
-                    propertiesFiles = propertiesFiles + "," + file;
-                }
-                if (dev && file.startsWith("file:")) {
-                    // we can only reload if file based
-                    sjReload.add(file.substring(5));
+                if (acceptPropertiesFile(file)) {
+                    if (!ResourceHelper.hasScheme(file) && !file.startsWith("github:")) {
+                        file = "file:" + file;
+                    }
+                    if (ObjectHelper.isEmpty(propertiesFiles)) {
+                        propertiesFiles = file;
+                    } else {
+                        propertiesFiles = propertiesFiles + "," + file;
+                    }
+                    if (dev && file.startsWith("file:")) {
+                        // we can only reload if file based
+                        sjReload.add(file.substring(5));
+                    }
                 }
                 continue;
             }
@@ -443,7 +734,7 @@ public class Run extends CamelCommand {
                 // check if file exist
                 File inputFile = new File(file.substring(5));
                 if (!inputFile.exists() && !inputFile.isFile()) {
-                    System.err.println("File does not exist: " + file);
+                    printer().printErr("File does not exist: " + file);
                     return 1;
                 }
             }
@@ -484,7 +775,19 @@ public class Run extends CamelCommand {
         }
         writeSetting(main, profileProperties, "camel.main.name", name);
 
-        if (js.length() > 0) {
+        if (sourceDir != null) {
+            // must be an existing directory
+            File dir = new File(sourceDir);
+            if (!dir.exists() && !dir.isDirectory()) {
+                printer().printErr("Directory does not exist: " + sourceDir);
+                return 1;
+            }
+            // make it a pattern as we load all files from this directory
+            // (optional=true as there may be non Camel routes files as well)
+            String sdir = "file:" + sourceDir + "/**?optional=true";
+            main.addInitialProperty("camel.main.routesIncludePattern", sdir);
+            writeSettings("camel.main.routesIncludePattern", sdir);
+        } else if (js.length() > 0) {
             main.addInitialProperty("camel.main.routesIncludePattern", js.toString());
             writeSettings("camel.main.routesIncludePattern", js.toString());
         } else {
@@ -495,6 +798,12 @@ public class Run extends CamelCommand {
             writeSettings("camel.jbang.classpathFiles", sjClasspathFiles.toString());
         } else {
             writeSetting(main, profileProperties, "camel.jbang.classpathFiles", () -> null);
+        }
+        if (sjJKubeFiles.length() > 0) {
+            main.addInitialProperty("camel.jbang.jkubeFiles", sjJKubeFiles.toString());
+            writeSettings("camel.jbang.jkubeFiles", sjJKubeFiles.toString());
+        } else {
+            writeSetting(main, profileProperties, "camel.jbang.jkubeFiles", () -> null);
         }
 
         if (sjKamelets.length() > 0) {
@@ -511,36 +820,30 @@ public class Run extends CamelCommand {
         }
 
         // we can only reload if file based
-        if (dev && sjReload.length() > 0) {
-            String reload = sjReload.toString();
-            main.addInitialProperty("camel.main.routesReloadEnabled", "true");
-            // use current dir, however if we run a file that are in another folder, then we should track that folder instead
-            String reloadDir = ".";
-            for (String r : reload.split(",")) {
-                String path = FileUtil.onlyPath(r);
-                if (path != null) {
-                    reloadDir = path;
-                    break;
-                }
-            }
-            main.addInitialProperty("camel.main.routesReloadDirectory", reloadDir);
-            main.addInitialProperty("camel.main.routesReloadPattern", reload);
-            main.addInitialProperty("camel.main.routesReloadDirectoryRecursive", isReloadRecursive(reload) ? "true" : "false");
-            // do not shutdown the JVM but stop routes when max duration is triggered
-            main.addInitialProperty("camel.main.durationMaxAction", "stop");
-        }
+        setupReload(main, sjReload);
 
         if (propertiesFiles != null) {
             String[] filesLocation = propertiesFiles.split(",");
+            // sort so general application.properties comes first (we should load profile first)
+            List<String> names = new ArrayList<>(List.of(filesLocation));
+            names.sort((o1, o2) -> {
+                // make sure application.properties is last
+                if (o1.endsWith("application.properties")) {
+                    return 1;
+                } else if (o2.endsWith("application.properties")) {
+                    return -1;
+                }
+                return 0;
+            });
             StringBuilder locations = new StringBuilder();
-            for (String file : filesLocation) {
+            for (String file : names) {
                 if (!file.startsWith("file:")) {
                     if (!file.startsWith("/")) {
                         file = FileSystems.getDefault().getPath("").toAbsolutePath() + File.separator + file;
                     }
                     file = "file://" + file;
                 }
-                if (locations.length() > 0) {
+                if (!locations.isEmpty()) {
                     locations.append(",");
                 }
                 locations.append(file);
@@ -552,35 +855,315 @@ public class Run extends CamelCommand {
             } else {
                 loc = locations.toString();
             }
-            // TODO: remove duplicates in loc
             main.addInitialProperty("camel.component.properties.location", loc);
             writeSettings("camel.component.properties.location", loc);
+            main.setPropertyPlaceholderLocations(loc);
+        }
+
+        // merge existing dependencies with --deps
+        addDependencies(RuntimeUtil.getDependenciesAsArray(profileProperties));
+        if (!dependencies.isEmpty()) {
+            var joined = String.join(",", dependencies);
+            main.addInitialProperty("camel.jbang.dependencies", joined);
+            writeSettings("camel.jbang.dependencies", joined);
+        }
+
+        // if we have a specific camel version then make sure we really need to switch
+        if (camelVersion != null) {
+            CamelCatalog catalog = new DefaultCamelCatalog();
+            String v = catalog.getCatalogVersion();
+            if (camelVersion.equals(v)) {
+                // same version, so we use current
+                camelVersion = null;
+            }
         }
 
         // okay we have validated all input and are ready to run
-        if (camelVersion != null) {
-            // run in another JVM with different camel version (foreground or background)
-            boolean custom = camelVersion.contains("-");
+        // (if exporting then we cannot run a different version)
+        if (!exportRun && camelVersion != null || isDebugMode()) {
+            // TODO: debug camel specific version
+            boolean custom = false;
+            if (camelVersion != null) {
+                // run in another JVM with different camel version (foreground or background)
+                custom = camelVersion.contains("-") && !camelVersion.endsWith("-SNAPSHOT");
+                if (custom) {
+                    // regular camel versions can also be a milestone or release candidate
+                    custom = !camelVersion.matches(".*-(RC|M)\\d$");
+                }
+            }
             if (custom) {
                 // custom camel distribution
                 return runCustomCamelVersion(main);
             } else {
-                // apache camel distribution
+                // apache camel distribution or remote debug enabled
                 return runCamelVersion(main);
             }
+        } else if (debugRun) {
+            // spawn new JVM to debug in background
+            return runDebug(main);
         } else if (background) {
             // spawn new JVM to run in background
             return runBackground(main);
         } else {
             // run default in current JVM with same camel version
-            return runKameletMain(main);
+            try {
+                return runKameletMain(main);
+            } catch (FailedToCreateRouteException ex) {
+                if (ignoreLoadingError) {
+                    printer().printErr(ex);
+                    return 0;
+                }
+                throw ex;
+            }
+        }
+    }
+
+    protected void addDependencies(String... deps) {
+        var depsArray = Optional.ofNullable(deps).orElse(new String[0]);
+        var depsList = Arrays.stream(depsArray).filter(tok -> !tok.isEmpty()).toList();
+        dependencies.addAll(depsList);
+    }
+
+    protected int runQuarkus() throws Exception {
+        if (background) {
+            printer().println("Run Camel Quarkus with --background is not supported");
+            return 1;
+        }
+
+        // create temp run dir
+        File runDir = new File(RUN_PLATFORM_DIR, Long.toString(System.currentTimeMillis()));
+        if (!this.background) {
+            runDir.deleteOnExit();
+        }
+
+        // export to hidden folder
+        ExportQuarkus eq = new ExportQuarkus(getMain());
+        eq.javaLiveReload = this.dev;
+        eq.symbolicLink = this.dev;
+        eq.mavenWrapper = true;
+        eq.gradleWrapper = false;
+        eq.quarkusVersion = this.quarkusVersion;
+        eq.quarkusGroupId = this.quarkusGroupId;
+        eq.quarkusArtifactId = this.quarkusArtifactId;
+        eq.camelVersion = this.camelVersion;
+        eq.kameletsVersion = this.kameletsVersion;
+        eq.exportDir = runDir.toString();
+        eq.localKameletDir = this.localKameletDir;
+        eq.excludes = this.excludes;
+        eq.filePaths = this.filePaths;
+        eq.files = this.files;
+        eq.name = this.name;
+        eq.gav = this.gav;
+        if (eq.gav == null) {
+            if (eq.name == null) {
+                eq.name = "jbang-run-dummy";
+            }
+            eq.gav = "org.example.project:" + eq.name + ":1.0-SNAPSHOT";
+        }
+        eq.dependencies = this.dependencies;
+        if (!this.exportRun) {
+            eq.addDependencies("camel:cli-connector");
+        }
+        eq.fresh = this.fresh;
+        eq.download = this.download;
+        eq.quiet = true;
+        eq.logging = false;
+        eq.loggingLevel = "off";
+        eq.ignoreLoadingError = this.ignoreLoadingError;
+        eq.lazyBean = this.lazyBean;
+        eq.applicationProperties = this.property;
+
+        printer().println("Running using Quarkus v" + eq.quarkusVersion + " (preparing and downloading files)");
+
+        // run export
+        int exit = eq.export();
+        if (exit != 0 || this.exportRun) {
+            return exit;
+        }
+
+        // run quarkus via maven
+        String mvnw = "/mvnw";
+        if (FileUtil.isWindows()) {
+            mvnw = "/mvnw.cmd";
+        }
+        ProcessBuilder pb = new ProcessBuilder();
+        pb.command(runDir + mvnw, "--quiet", "--file", runDir.getCanonicalPath() + File.separatorChar + "pom.xml", "package",
+                "quarkus:" + (dev ? "dev" : "run"));
+
+        pb.inheritIO(); // run in foreground (with IO so logs are visible)
+        Process p = pb.start();
+        this.spawnPid = p.pid();
+        // wait for that process to exit as we run in foreground
+        return p.waitFor();
+    }
+
+    protected int runSpringBoot() throws Exception {
+        if (background) {
+            printer().println("Run Camel Spring Boot with --background is not supported");
+            return 1;
+        }
+
+        // create temp run dir
+        File runDir = new File(RUN_PLATFORM_DIR, Long.toString(System.currentTimeMillis()));
+        if (!this.background) {
+            runDir.deleteOnExit();
+        }
+
+        // export to hidden folder
+        ExportSpringBoot eq = new ExportSpringBoot(getMain());
+        // Java codes reload is not supported in Spring Boot since it has to be recompiled to trigger the restart
+        eq.javaLiveReload = false;
+        eq.symbolicLink = this.dev;
+        eq.mavenWrapper = true;
+        eq.gradleWrapper = false;
+        eq.springBootVersion = this.springBootVersion;
+        eq.camelVersion = this.camelVersion;
+        eq.camelSpringBootVersion = this.camelSpringBootVersion != null ? this.camelSpringBootVersion : this.camelVersion;
+        eq.kameletsVersion = this.kameletsVersion;
+        eq.exportDir = runDir.toString();
+        eq.localKameletDir = this.localKameletDir;
+        eq.excludes = this.excludes;
+        eq.filePaths = this.filePaths;
+        eq.files = this.files;
+        eq.name = this.name;
+        eq.gav = this.gav;
+        eq.repositories = this.repositories;
+        if (eq.gav == null) {
+            if (eq.name == null) {
+                eq.name = "jbang-run-dummy";
+            }
+            eq.gav = "org.example.project:" + eq.name + ":1.0-SNAPSHOT";
+        }
+        eq.dependencies.addAll(this.dependencies);
+        if (!this.exportRun) {
+            eq.addDependencies("camel:cli-connector");
+        }
+        if (this.dev) {
+            // hot-reload of spring-boot
+            eq.addDependencies("mvn:org.springframework.boot:spring-boot-devtools");
+        }
+        eq.fresh = this.fresh;
+        eq.download = this.download;
+        eq.quiet = true;
+        eq.logging = false;
+        eq.loggingLevel = "off";
+        eq.ignoreLoadingError = this.ignoreLoadingError;
+        eq.lazyBean = this.lazyBean;
+        eq.applicationProperties = this.property;
+
+        printer().println("Running using Spring Boot v" + eq.springBootVersion + " (preparing and downloading files)");
+
+        // run export
+        int exit = eq.export();
+        if (exit != 0 || exportRun) {
+            return exit;
+        }
+
+        // prepare spring-boot for logging to file
+        InputStream is = Run.class.getClassLoader().getResourceAsStream("spring-boot-logback.xml");
+        eq.safeCopy(is, new File(eq.exportDir + "/src/main/resources/logback.xml"));
+
+        // run spring-boot via maven
+        ProcessBuilder pb = new ProcessBuilder();
+        String mvnw = "/mvnw";
+        if (FileUtil.isWindows()) {
+            mvnw = "/mvnw.cmd";
+        }
+        pb.command(runDir + mvnw, "--quiet", "--file", runDir.getCanonicalPath() + File.separatorChar + "pom.xml",
+                "spring-boot:run");
+
+        pb.inheritIO(); // run in foreground (with IO so logs are visible)
+        Process p = pb.start();
+        this.spawnPid = p.pid();
+        // wait for that process to exit as we run in foreground
+        return p.waitFor();
+    }
+
+    private boolean acceptPropertiesFile(String file) {
+        String name = FileUtil.onlyName(file);
+        if (profile != null && name.startsWith("application-")) {
+            // only accept the file that matches the correct profile
+            return ("application-" + profile).equals(name);
+        }
+        return true;
+    }
+
+    protected void doAddInitialProperty(KameletMain main) {
+        // noop
+    }
+
+    private void setupReload(KameletMain main, StringJoiner sjReload) {
+        if (dev && (sourceDir != null || sjReload.length() > 0)) {
+            main.addInitialProperty("camel.main.routesReloadEnabled", "true");
+            if (sourceDir != null) {
+                main.addInitialProperty("camel.jbang.sourceDir", sourceDir);
+                main.addInitialProperty("camel.main.routesReloadDirectory", sourceDir);
+                main.addInitialProperty("camel.main.routesReloadPattern", "*");
+                main.addInitialProperty("camel.main.routesReloadDirectoryRecursive", "true");
+            } else {
+                String pattern = sjReload.toString();
+                String reloadDir = ".";
+                // use current dir, however if we run a file that are in another folder, then we should track that folder instead
+                for (String r : sjReload.toString().split(",")) {
+                    String path = FileUtil.onlyPath(r);
+                    if (path != null && !path.equals(".camel-jbang")) {
+                        reloadDir = path;
+                        break;
+                    }
+                }
+                main.addInitialProperty("camel.main.routesReloadDirectory", reloadDir);
+                main.addInitialProperty("camel.main.routesReloadPattern", pattern);
+                main.addInitialProperty("camel.main.routesReloadDirectoryRecursive",
+                        isReloadRecursive(pattern) ? "true" : "false");
+            }
+            // do not shutdown the JVM but stop routes when max duration is triggered
+            main.addInitialProperty("camel.main.durationMaxAction", "stop");
         }
     }
 
     private Properties loadProfileProperties() throws Exception {
         Properties answer = null;
 
-        File profilePropertiesFile = new File(getProfile() + ".properties");
+        if (transformMessageRun) {
+            // do not load profile in transform message run as it should be vanilla empty
+            return answer;
+        }
+
+        // application.properties
+        File profilePropertiesFile;
+        if (sourceDir != null) {
+            profilePropertiesFile = new File(sourceDir, "application.properties");
+        } else {
+            profilePropertiesFile = new File("application.properties");
+        }
+        // based application-profile.properties
+        answer = doLoadAndInitProfileProperties(profilePropertiesFile);
+
+        if (profile != null) {
+            if (sourceDir != null) {
+                profilePropertiesFile = new File(sourceDir, "application-" + profile + ".properties");
+            } else {
+                profilePropertiesFile = new File("application-" + profile + ".properties");
+            }
+            // application-profile.properties should override standard application.properties
+            Properties override = doLoadAndInitProfileProperties(profilePropertiesFile);
+            if (override != null) {
+                if (answer == null) {
+                    answer = override;
+                } else {
+                    answer.putAll(override);
+                }
+            }
+        }
+
+        if (kameletsVersion == null) {
+            kameletsVersion = VersionHelper.extractKameletsVersion();
+        }
+        return answer;
+    }
+
+    private Properties doLoadAndInitProfileProperties(File profilePropertiesFile) throws Exception {
+        Properties answer = null;
         if (profilePropertiesFile.exists()) {
             answer = loadProfileProperties(profilePropertiesFile);
             // logging level/color may be configured in the properties file
@@ -589,69 +1172,202 @@ public class Run extends CamelCommand {
                     = "true".equals(answer.getProperty("loggingColor", loggingColor ? "true" : "false"));
             loggingJson
                     = "true".equals(answer.getProperty("loggingJson", loggingJson ? "true" : "false"));
-            if (propertiesFiles == null) {
-                propertiesFiles = "file:" + getProfile() + ".properties";
-            } else {
-                propertiesFiles = propertiesFiles + ",file:" + profilePropertiesFile.getName();
-            }
-            repos = answer.getProperty("camel.jbang.repos", repos);
+            repositories = answer.getProperty("camel.jbang.repos", repositories);
             mavenSettings = answer.getProperty("camel.jbang.maven-settings", mavenSettings);
             mavenSettingsSecurity = answer.getProperty("camel.jbang.maven-settings-security", mavenSettingsSecurity);
+            mavenCentralEnabled = "true"
+                    .equals(answer.getProperty("camel.jbang.maven-central-enabled", mavenCentralEnabled ? "true" : "false"));
+            mavenApacheSnapshotEnabled = "true".equals(answer.getProperty("camel.jbang.maven-apache-snapshot-enabled",
+                    mavenApacheSnapshotEnabled ? "true" : "false"));
             openapi = answer.getProperty("camel.jbang.open-api", openapi);
             download = "true".equals(answer.getProperty("camel.jbang.download", download ? "true" : "false"));
             background = "true".equals(answer.getProperty("camel.jbang.background", background ? "true" : "false"));
+            backgroundWait = "true".equals(answer.getProperty("camel.jbang.backgroundWait", backgroundWait ? "true" : "false"));
+            jvmDebugPort = parseJvmDebugPort(answer.getProperty("camel.jbang.jvmDebug", Integer.toString(jvmDebugPort)));
             camelVersion = answer.getProperty("camel.jbang.camel-version", camelVersion);
+            kameletsVersion = answer.getProperty("camel.jbang.kameletsVersion", kameletsVersion);
+            springBootVersion = answer.getProperty("camel.jbang.springBootVersion", springBootVersion);
+            quarkusGroupId = answer.getProperty("camel.jbang.quarkusGroupId", quarkusGroupId);
+            quarkusArtifactId = answer.getProperty("camel.jbang.quarkusArtifactId", quarkusArtifactId);
+            quarkusVersion = answer.getProperty("camel.jbang.quarkusVersion", quarkusVersion);
+            gav = answer.getProperty("camel.jbang.gav", gav);
+            stub = answer.getProperty("camel.jbang.stub", stub);
+            excludes = RuntimeUtil.getCommaSeparatedPropertyAsList(answer, "camel.jbang.excludes", excludes);
         }
+
         return answer;
     }
 
+    /**
+     * Parses the JVM debug port from the given value.
+     * <p/>
+     * The value can be {@code true} to indicate a default port which is {@code 4004}, {@code false} to indicate no
+     * debug, or a number corresponding to a custom port.
+     *
+     * @param  value the value to parse.
+     *
+     * @return       the JVM debug port corresponding to the given value.
+     */
+    private static int parseJvmDebugPort(String value) {
+        if (value == null) {
+            return 0;
+        } else if (value.equals("true")) {
+            return 4004;
+        } else if (value.equals("false")) {
+            return 0;
+        }
+        return Integer.parseInt(value);
+    }
+
     protected int runCamelVersion(KameletMain main) throws Exception {
-        List<String> cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        List<String> cmds;
+        if (spec != null) {
+            cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        } else {
+            cmds = new ArrayList<>();
+            cmds.add("run");
+            if (transformMessageRun) {
+                cmds.add("--empty");
+            }
+        }
 
         if (background) {
             cmds.remove("--background=true");
             cmds.remove("--background");
+            cmds.remove("--background-wait");
+            cmds.remove("--background-wait=false");
+            cmds.remove("--background-wait=true");
         }
-        cmds.remove("--camel-version=" + camelVersion);
+        if (camelVersion != null) {
+            cmds.remove("--camel-version=" + camelVersion);
+        }
         // need to use jbang command to specify camel version
         List<String> jbangArgs = new ArrayList<>();
         jbangArgs.add("jbang");
         jbangArgs.add("run");
-        jbangArgs.add("-Dcamel.jbang.version=" + camelVersion);
+        if (camelVersion != null) {
+            jbangArgs.add("-Dcamel.jbang.version=" + camelVersion);
+        }
+        if (kameletsVersion != null) {
+            jbangArgs.add("-Dcamel-kamelets.version=" + kameletsVersion);
+        }
+        // tooling may signal to run JMX debugger in suspended mode via JVM system property
+        // which we must include in args as well
+        String debugSuspend = System.getProperty(BacklogDebugger.SUSPEND_MODE_SYSTEM_PROP_NAME);
+        if (debugSuspend != null) {
+            jbangArgs.add("-D" + BacklogDebugger.SUSPEND_MODE_SYSTEM_PROP_NAME + "=" + debugSuspend);
+        }
+        if (isDebugMode()) {
+            jbangArgs.add("--debug=" + jvmDebugPort); // jbang --debug=port
+            cmds.removeIf(arg -> arg.startsWith("--jvm-debug"));
+        }
 
-        if (repos != null) {
-            jbangArgs.add("--repos=" + repos);
+        if (repositories != null) {
+            jbangArgs.add("--repos=" + repositories);
         }
         jbangArgs.add("camel@apache/camel");
         jbangArgs.addAll(cmds);
 
         ProcessBuilder pb = new ProcessBuilder();
         pb.command(jbangArgs);
+
         if (background) {
-            Process p = pb.start();
-            System.out.println("Running Camel integration: " + name + " (version: " + camelVersion
-                               + ") in background with PID: " + p.pid());
-            return 0;
+            return runBackgroundProcess(pb, "Camel Main");
         } else {
             pb.inheritIO(); // run in foreground (with IO so logs are visible)
             Process p = pb.start();
+            this.spawnPid = p.pid();
             // wait for that process to exit as we run in foreground
             return p.waitFor();
         }
     }
 
     protected int runBackground(KameletMain main) throws Exception {
-        List<String> cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        List<String> cmds;
+        if (spec != null) {
+            cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        } else {
+            cmds = new ArrayList<>();
+            cmds.add("run");
+            if (transformMessageRun) {
+                cmds.add("--empty");
+            }
+        }
 
         cmds.remove("--background=true");
         cmds.remove("--background");
+        cmds.remove("--background-wait=false");
+        cmds.remove("--background-wait=true");
+        cmds.remove("--background-wait");
 
-        cmds.add(0, "camel");
+        addCamelCommand(cmds);
 
         ProcessBuilder pb = new ProcessBuilder();
         pb.command(cmds);
+
+        return runBackgroundProcess(pb, "Camel Main");
+    }
+
+    protected int runBackgroundProcess(ProcessBuilder pb, String kind) throws Exception {
+        File log = null;
+        if (backgroundWait) {
+            // store background output in a log file to capture any error on startup
+            log = getRunBackgroundLogFile("" + new Random().nextLong());
+            log.deleteOnExit();
+            pb.redirectErrorStream(true);
+            pb.redirectOutput(log);
+        }
+
         Process p = pb.start();
-        System.out.println("Running Camel integration: " + name + " in background with PID: " + p.pid());
+        this.spawnPid = p.pid();
+        if (!exportRun && !transformRun && !transformMessageRun) {
+            printer().println(
+                    "Running " + kind + ": " + name + " in background with PID: " + p.pid()
+                              + (backgroundWait ? " (waiting to startup)" : ""));
+        }
+
+        int ec = 0;
+        if (log != null) {
+            StopWatch watch = new StopWatch();
+            int state = 0; // state 5 is running
+            while (p.isAlive() && watch.taken() < 20000 && state < 5) {
+                JsonObject root = loadStatus(p.pid());
+                if (root != null) {
+                    JsonObject context = (JsonObject) root.get("context");
+                    if (context != null) {
+                        state = context.getInteger("phase");
+                    }
+                }
+                if (state < 5) {
+                    try {
+                        Thread.sleep(500);
+                    } catch (Exception e) {
+                        // we want to exit
+                        break;
+                    }
+                }
+            }
+            if (!p.isAlive()) {
+                ec = p.exitValue();
+                if (ec != 0) {
+                    printer().println(kind + ": " + name + " startup failure");
+                    printer().println("");
+                    String text = IOHelper.loadText(new FileInputStream(log));
+                    printer().print(text);
+                }
+            } else {
+                printer().println(kind + ": " + name + " (state: " + extractState(state) + ")");
+            }
+        }
+        if (log != null) {
+            log.delete();
+        }
+
+        return ec;
+    }
+
+    protected int runDebug(KameletMain main) throws Exception {
+        // to be implemented in Debug
         return 0;
     }
 
@@ -660,47 +1376,60 @@ public class Run extends CamelCommand {
         String content = IOHelper.loadText(is);
         IOHelper.close(is);
 
-        content = content.replaceFirst("\\{\\{ \\.JavaVersion }}", "17"); // TODO: java 11 or 17
-        if (repos != null) {
-            content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "//REPOS " + repos);
+        content = content.replaceFirst("\\{\\{ \\.JavaVersion }}", "17");
+        if (repositories != null) {
+            content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "//REPOS " + repositories);
         } else {
             content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "");
         }
 
         // use custom distribution of camel
         StringBuilder sb = new StringBuilder();
-        sb.append(String.format("//DEPS org.apache.camel:camel-bom:%s@pom\n", camelVersion));
-        sb.append(String.format("//DEPS org.apache.camel:camel-core:%s\n", camelVersion));
-        sb.append(String.format("//DEPS org.apache.camel:camel-core-engine:%s\n", camelVersion));
-        sb.append(String.format("//DEPS org.apache.camel:camel-main:%s\n", camelVersion));
-        sb.append(String.format("//DEPS org.apache.camel:camel-java-joor-dsl:%s\n", camelVersion));
-        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet:%s\n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-bom:%s@pom%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-core:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-core-engine:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-main:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-java-joor-dsl:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet-main:%s%n", camelVersion));
+        if (VersionHelper.isGE(camelVersion, "3.19.0")) {
+            sb.append(String.format("//DEPS org.apache.camel:camel-cli-connector:%s%n", camelVersion));
+        }
         content = content.replaceFirst("\\{\\{ \\.CamelDependencies }}", sb.toString());
 
-        // use apache distribution of camel-jbang
+        // use apache distribution of camel-jbang/github-resolver
         String v = camelVersion.substring(0, camelVersion.lastIndexOf('.'));
         sb = new StringBuilder();
-        sb.append(String.format("//DEPS org.apache.camel:camel-jbang-core:%s\n", v));
-        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet-main:%s\n", v));
-        sb.append(String.format("//DEPS org.apache.camel:camel-resourceresolver-github:%s\n", v));
-        if (VersionHelper.isGE(v, "3.19.0")) {
-            sb.append(String.format("//DEPS org.apache.camel:camel-cli-connector:%s\n", v));
-        }
+        sb.append(String.format("//DEPS org.apache.camel:camel-jbang-core:%s%n", v));
+        sb.append(String.format("//DEPS org.apache.camel:camel-resourceresolver-github:%s%n", v));
         content = content.replaceFirst("\\{\\{ \\.CamelJBangDependencies }}", sb.toString());
 
-        String fn = WORK_DIR + "/CustomCamelJBang.java";
-        Files.write(Paths.get(fn), content.getBytes(StandardCharsets.UTF_8));
+        sb = new StringBuilder();
+        sb.append(String.format("//DEPS org.apache.camel.kamelets:camel-kamelets:%s%n", kameletsVersion));
+        content = content.replaceFirst("\\{\\{ \\.CamelKameletsDependencies }}", sb.toString());
 
-        List<String> cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        String fn = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/CustomCamelJBang.java";
+        Files.writeString(Paths.get(fn), content);
+
+        List<String> cmds;
+        if (spec != null) {
+            cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        } else {
+            cmds = new ArrayList<>();
+            cmds.add("run");
+        }
 
         if (background) {
             cmds.remove("--background=true");
             cmds.remove("--background");
+            cmds.remove("--background-wait=true");
+            cmds.remove("--background-wait=false");
+            cmds.remove("--background-wait");
         }
-        if (repos != null) {
+        if (repositories != null) {
             if (!VersionHelper.isGE(v, "3.18.1")) {
                 // --repos is not supported in 3.18.0 or older, so remove
-                cmds.remove("--repos=" + repos);
+                cmds.remove("--repos=" + repositories);
             }
         }
 
@@ -708,20 +1437,18 @@ public class Run extends CamelCommand {
         // need to use jbang command to specify camel version
         List<String> jbangArgs = new ArrayList<>();
         jbangArgs.add("jbang");
-        jbangArgs.add(WORK_DIR + "/CustomCamelJBang.java");
+        jbangArgs.add(CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/CustomCamelJBang.java");
 
         jbangArgs.addAll(cmds);
 
         ProcessBuilder pb = new ProcessBuilder();
         pb.command(jbangArgs);
         if (background) {
-            Process p = pb.start();
-            System.out.println("Running Camel integration: " + name + " (version: " + camelVersion
-                               + ") in background with PID: " + p.pid());
-            return 0;
+            return runBackgroundProcess(pb, "Camel Main");
         } else {
             pb.inheritIO(); // run in foreground (with IO so logs are visible)
             Process p = pb.start();
+            this.spawnPid = p.pid();
             // wait for that process to exit as we run in foreground
             return p.waitFor();
         }
@@ -739,20 +1466,23 @@ public class Run extends CamelCommand {
         return main.getExitCode();
     }
 
-    private String loadFromCode(String code) throws IOException {
-        String fn = WORK_DIR + "/CodeRoute.java";
+    private String loadFromCode(String code, String name, boolean file) throws IOException {
+        String fn = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/" + name + ".java";
         InputStream is = Run.class.getClassLoader().getResourceAsStream("templates/code-java.tmpl");
         String content = IOHelper.loadText(is);
         IOHelper.close(is);
-        // need to replace single quote as double quotes and end with semicolon
-        code = code.replace("'", "\"");
-        code = code.trim();
+        if (!file) {
+            // need to replace single quote as double quotes (from input string)
+            code = code.replace("'", "\"");
+            code = code.trim();
+        }
+        // ensure the code ends with semicolon to finish the java statement
         if (!code.endsWith(";")) {
             code = code + ";";
         }
-        content = content.replaceFirst("\\{\\{ \\.Name }}", "CodeRoute");
-        content = content.replaceFirst("\\{\\{ \\.Code }}", code);
-        Files.write(Paths.get(fn), content.getBytes(StandardCharsets.UTF_8));
+        content = StringHelper.replaceFirst(content, "{{ .Name }}", name);
+        content = StringHelper.replaceFirst(content, "{{ .Code }}", code);
+        Files.writeString(Paths.get(fn), content);
         return "file:" + fn;
     }
 
@@ -827,8 +1557,8 @@ public class Run extends CamelCommand {
             if ("java".equals(ext)) {
                 String fqn = determineClassName(t.toString());
                 if (fqn == null) {
-                    throw new IllegalArgumentException(
-                            "Cannot determine the Java class name from the source in the clipboard");
+                    // wrap code in wrapper
+                    return loadFromCode(t.toString(), "ClipboardRoute", true);
                 }
                 // drop package in file name
                 String cn = fqn;
@@ -837,7 +1567,7 @@ public class Run extends CamelCommand {
                 }
                 fn = cn + ".java";
             }
-            Files.write(Paths.get(fn), t.toString().getBytes(StandardCharsets.UTF_8));
+            Files.writeString(Paths.get(fn), t.toString());
             file = "file:" + fn;
         }
         return file;
@@ -846,7 +1576,7 @@ public class Run extends CamelCommand {
     private KameletMain createMainInstance() {
         KameletMain main;
         if (localKameletDir == null || localKameletDir.isEmpty()) {
-            main = new KameletMain();
+            main = new KameletMain(CAMEL_INSTANCE_TYPE);
         } else {
             StringJoiner sj = new StringJoiner(",");
             String[] parts = localKameletDir.split(",");
@@ -863,42 +1593,74 @@ public class Run extends CamelCommand {
                 }
                 sj.add(part);
             }
-            main = new KameletMain(sj.toString());
+            main = new KameletMain(CAMEL_INSTANCE_TYPE, sj.toString());
             writeSettings("camel.jbang.localKameletDir", sj.toString());
         }
         return main;
     }
 
-    private void configureLogging() {
-        if (silentRun) {
-            // do not configure logging
-        } else if (logging) {
-            RuntimeUtil.configureLog(loggingLevel, loggingColor, loggingJson, pipeRun, false);
+    private void configureLogging() throws Exception {
+        if (logging) {
+            // allow to configure individual logging levels in application.properties
+            Properties prop = loadProfileProperties();
+            if (prop != null) {
+                for (Object obj : prop.keySet()) {
+                    String key = obj.toString();
+                    String value = prop.getProperty(key);
+                    if (key.startsWith("logging.level.")) {
+                        key = key.substring(14);
+                    } else if (key.startsWith("quarkus.log.category.")) {
+                        key = key.substring(21);
+                        if (key.endsWith(".level")) {
+                            key = key.substring(0, key.length() - 6);
+                        }
+                    } else {
+                        continue;
+                    }
+                    key = StringHelper.removeLeadingAndEndingQuotes(key);
+                    String line = key + "=" + value;
+                    String line2 = key + " = " + value;
+                    if (!loggingCategory.contains(line) && !loggingCategory.contains(line2)) {
+                        loggingCategory.add(line);
+                    }
+                }
+            }
+            RuntimeUtil.configureLog(loggingLevel, loggingColor, loggingJson, scriptRun, false, loggingConfigPath,
+                    loggingCategory);
             writeSettings("loggingLevel", loggingLevel);
             writeSettings("loggingColor", loggingColor ? "true" : "false");
             writeSettings("loggingJson", loggingJson ? "true" : "false");
-            if (!pipeRun) {
+            if (!scriptRun) {
                 // remember log file
-                File dir = new File(System.getProperty("user.home"), ".camel");
                 String name = RuntimeUtil.getPid() + ".log";
-                logFile = new File(dir, name);
+                final File logDir = CommandLineHelper.getCamelDir();
+                logDir.mkdirs(); //make sure the parent dir exists
+                logFile = new File(logDir, name);
                 logFile.deleteOnExit();
             }
         } else {
-            RuntimeUtil.configureLog("off", false, false, false, false);
+            RuntimeUtil.configureLog("off", false, false, false, false, null, null);
             writeSettings("loggingLevel", "off");
         }
     }
 
     private void generateOpenApi() throws Exception {
-        final ObjectMapper mapper = new ObjectMapper();
-        final JsonNode node = mapper.readTree(Paths.get(openapi).toFile());
-        OasDocument document = (OasDocument) Library.readDocument(node);
-        Configurator.setRootLevel(Level.OFF);
-        try (CamelContext context = new LightweightCamelContext()) {
-            String out = RestDslGenerator.toYaml(document).generate(context, false);
-            Files.write(Paths.get(OPENAPI_GENERATED_FILE), out.getBytes());
+        File file = Paths.get(openapi).toFile();
+        if (!file.exists() && !file.isFile()) {
+            throw new FileNotFoundException("Cannot find file: " + file);
         }
+
+        InputStream is = Run.class.getClassLoader().getResourceAsStream("templates/rest-dsl.yaml.tmpl");
+        String content = IOHelper.loadText(is);
+        IOHelper.close(is);
+
+        String onlyName = file.getPath();
+        content = content.replaceFirst("\\{\\{ \\.Spec }}", onlyName);
+
+        Files.writeString(Paths.get(OPENAPI_GENERATED_FILE), content);
+
+        // we need to include the spec on the classpath
+        files.add(openapi);
     }
 
     private boolean knownFile(String file) throws Exception {
@@ -910,26 +1672,36 @@ public class Run extends CamelCommand {
 
         String ext2 = FileUtil.onlyExt(file, true);
         if (ext2 != null) {
-            boolean github = file.startsWith("github:") || file.startsWith("https://github.com/")
-                    || file.startsWith("https://gist.github.com/");
+            SourceScheme sourceScheme = SourceScheme.fromUri(file);
             // special for yaml or xml, as we need to check if they have camel or not
-            if (!github && ("xml".equals(ext2) || "yaml".equals(ext2))) {
+            if (!sourceScheme.isRemote() && ("xml".equals(ext2) || "yaml".equals(ext2))) {
                 // load content into memory
-                try (FileInputStream fis = new FileInputStream(file)) {
-                    String data = IOHelper.loadText(fis);
-                    if ("xml".equals(ext2)) {
-                        return data.contains("<routes") || data.contains("<routeConfiguration") || data.contains("<rests");
-                    } else {
-                        // also support Camel K integrations and Kamelet bindings
-                        return data.contains("- from:") || data.contains("- route:") || data.contains("- route-configuration:")
-                                || data.contains("- rest:") || data.contains("KameletBinding")
-                                || data.contains("kind: Integration");
+                Source source = SourceHelper.resolveSource(file);
+                if ("xml".equals(ext2)) {
+                    XmlStreamDetector detector = new XmlStreamDetector(
+                            new ByteArrayInputStream(source.content().getBytes(StandardCharsets.UTF_8)));
+                    XmlStreamInfo info = detector.information();
+                    if (!info.isValid()) {
+                        return false;
                     }
+                    return ACCEPTED_XML_ROOT_ELEMENTS.contains(info.getRootElementName());
+                } else {
+                    // TODO: we probably need a way to parse the content and match against the YAML DSL expected by Camel
+                    // This check looks very fragile
+                    return source.content().contains("- from:")
+                            || source.content().contains("- route:")
+                            || source.content().contains("- routeTemplate") || source.content().contains("- route-template:")
+                            || source.content().contains("- routeConfiguration:")
+                            || source.content().contains("- route-configuration:")
+                            || source.content().contains("- rest:")
+                            || source.content().contains("- beans:")
+                            // also support Pipes.
+                            || source.content().contains("Pipe");
                 }
             }
             // if the ext is an accepted file then we include it as a potential route
             // (java files need to be included as route to support pojos/processors with routes)
-            return Arrays.stream(ACCEPTED_FILE_EXT).anyMatch(e -> e.equalsIgnoreCase(ext2));
+            return SourceHelper.isAcceptedSourceFile(ext2);
         } else {
             // assume match as it can be wildcard or dir
             return true;
@@ -937,11 +1709,16 @@ public class Run extends CamelCommand {
     }
 
     private boolean skipFile(String name) {
-        if (OPENAPI_GENERATED_FILE.equals(name)) {
+        if (name.startsWith("github:") || name.startsWith("https://github.com/")
+                || name.startsWith("https://gist.github.com/")) {
             return false;
         }
-        if (name.startsWith(".")) {
-            return true;
+
+        // flatten file
+        name = FileUtil.stripPath(name);
+
+        if (OPENAPI_GENERATED_FILE.equals(name)) {
+            return false;
         }
         if ("pom.xml".equalsIgnoreCase(name)) {
             return true;
@@ -956,10 +1733,30 @@ public class Run extends CamelCommand {
                 || "compose.yaml".equals(name)) {
             return true;
         }
+        if (name.equals("NOTICE.txt") || name.equals("LICENSE.txt")) {
+            return true;
+        }
+
+        if (name.startsWith(".")) {
+            // relative file is okay, otherwise we assume it's a hidden file
+            boolean ok = name.startsWith("..") || name.startsWith("./");
+            if (!ok) {
+                return true;
+            }
+        }
+
+        // is the file excluded?
+        if (isExcluded(name, excludes)) {
+            return true;
+        }
 
         // skip dirs
         File f = new File(name);
         if (f.exists() && f.isDirectory()) {
+            return true;
+        }
+
+        if (FileUtil.onlyExt(name) == null) {
             return true;
         }
 
@@ -972,13 +1769,42 @@ public class Run extends CamelCommand {
         return false;
     }
 
+    private static boolean isExcluded(String name, List<String> excludes) {
+        if (excludes != null) {
+            for (String pattern : excludes) {
+                pattern = pattern.trim();
+                if (AntPathMatcher.INSTANCE.match(pattern, name)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private boolean jkubeFile(String name) {
+        return name.endsWith(".jkube.yaml") || name.endsWith(".jkube.yml");
+    }
+
     private void writeSettings(String key, String value) {
         FileOutputStream fos = null;
         try {
-            fos = new FileOutputStream(WORK_DIR + "/" + RUN_SETTINGS_FILE, true);
-            String line = key + "=" + value;
-            fos.write(line.getBytes(StandardCharsets.UTF_8));
-            fos.write(System.lineSeparator().getBytes(StandardCharsets.UTF_8));
+            // use java.util.Properties to ensure the value is escaped correctly
+            Properties prop = new Properties();
+            prop.setProperty(key, value);
+            StringWriter sw = new StringWriter();
+            prop.store(sw, null);
+
+            File runSettings = new File(CommandLineHelper.getWorkDir(), RUN_SETTINGS_FILE);
+            fos = new FileOutputStream(runSettings, true);
+
+            String[] lines = sw.toString().split(System.lineSeparator());
+            for (String line : lines) {
+                // properties store timestamp as comment which we want to skip
+                if (!line.startsWith("#")) {
+                    fos.write(line.getBytes(StandardCharsets.UTF_8));
+                    fos.write(System.lineSeparator().getBytes(StandardCharsets.UTF_8));
+                }
+            }
         } catch (Exception e) {
             // ignore
         } finally {
@@ -1007,7 +1833,7 @@ public class Run extends CamelCommand {
             try {
                 Thread.sleep(10);
             } catch (InterruptedException ex) {
-                // Ignore Exception
+                Thread.currentThread().interrupt();
             }
             if (!f.delete()) {
                 f.deleteOnExit();
@@ -1050,7 +1876,7 @@ public class Run extends CamelCommand {
         @Override
         public void onDownloadDependency(String groupId, String artifactId, String version) {
             String line = "mvn:" + groupId + ":" + artifactId;
-            if (version != null) {
+            if (ObjectHelper.isNotEmpty(version)) {
                 line += ":" + version;
             }
             if (!downloaded.contains(line)) {
@@ -1097,6 +1923,67 @@ public class Run extends CamelCommand {
             String arg = args.pop();
             cmd.files.add(arg);
         }
+    }
+
+    static class DebugConsumer extends ParameterConsumer<Run> {
+        private static final Pattern DEBUG_ARG_VALUE_PATTERN = Pattern.compile("\\d+|true|false");
+
+        @Override
+        protected void doConsumeParameters(Stack<String> args, Run cmd) {
+            String arg = args.isEmpty() ? "" : args.peek();
+            if (DEBUG_ARG_VALUE_PATTERN.asPredicate().test(arg)) {
+                // The value matches with the expected format so let's assume that it is a debug argument value
+                args.pop();
+            } else {
+                // Here we assume that the value is not a debug argument value so let's simply enable the debug mode
+                arg = "true";
+            }
+            cmd.jvmDebugPort = parseJvmDebugPort(arg);
+        }
+
+        @Override
+        protected boolean failIfEmptyArgs() {
+            return false;
+        }
+    }
+
+    protected static void addCamelCommand(List<String> cmds) {
+        if (FileUtil.isWindows()) {
+            String jbangDir = System.getenv().getOrDefault("JBANG_DIR", System.getProperty("user.home") + "\\.jbang");
+            cmds.add(0, jbangDir + "\\bin\\camel.cmd");
+        } else {
+            cmds.add(0, "camel");
+        }
+    }
+
+    private JsonObject loadStatus(long pid) {
+        try {
+            File f = getStatusFile(Long.toString(pid));
+            if (f != null) {
+                FileInputStream fis = new FileInputStream(f);
+                String text = IOHelper.loadText(fis);
+                IOHelper.close(fis);
+                return (JsonObject) Jsoner.deserialize(text);
+            }
+        } catch (Exception e) {
+            // ignore
+        }
+        return null;
+    }
+
+    @Override
+    protected Printer printer() {
+        // Export run should be silent
+        if (exportRun) {
+            if (quietPrinter == null) {
+                quietPrinter = new Printer.QuietPrinter(super.printer());
+            }
+
+            CommandHelper.setPrinter(quietPrinter);
+            return quietPrinter;
+        }
+
+        return super.printer();
     }
 
 }
