@@ -20,15 +20,11 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.StringWriter;
-import java.io.Writer;
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Type;
-import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -36,7 +32,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Date;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -46,6 +42,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import javax.inject.Inject;
 
 import org.apache.camel.Category;
 import org.apache.camel.maven.packaging.generics.ClassUtil;
@@ -80,6 +78,8 @@ import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
+import org.apache.maven.project.MavenProjectHelper;
+import org.codehaus.plexus.build.BuildContext;
 import org.jboss.forge.roaster.Roaster;
 import org.jboss.forge.roaster._shade.org.eclipse.jdt.core.dom.ASTNode;
 import org.jboss.forge.roaster._shade.org.eclipse.jdt.core.dom.Javadoc;
@@ -123,6 +123,16 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     protected Map<String, String> sources = new HashMap<>();
     protected Map<String, JavaSource<?>> parsed = new HashMap<>();
 
+    @Inject
+    public EndpointSchemaGeneratorMojo(MavenProjectHelper projectHelper, BuildContext buildContext) {
+        super(projectHelper, buildContext);
+    }
+
+    // for testing purposes
+    EndpointSchemaGeneratorMojo() {
+        this(null, null);
+    }
+
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
         if (classesDirectory == null) {
@@ -156,7 +166,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         // make sure we sort the classes in case one inherit from the other
         classes.sort(this::compareClasses);
 
-        Map<Class, ComponentModel> models = new HashMap<>();
+        Map<Class<?>, ComponentModel> models = new HashMap<>();
         for (Class<?> classElement : classes) {
             UriEndpoint uriEndpoint = classElement.getAnnotation(UriEndpoint.class);
             String scheme = uriEndpoint.scheme();
@@ -183,7 +193,8 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     }
 
     private void processSchemas(
-            Map<Class, ComponentModel> models, Class<?> classElement, UriEndpoint uriEndpoint, String label, String[] schemes,
+            Map<Class<?>, ComponentModel> models, Class<?> classElement, UriEndpoint uriEndpoint, String label,
+            String[] schemes,
             String[] titles, String[] extendsSchemes) {
         for (int i = 0; i < schemes.length; i++) {
             final String alias = schemes[i];
@@ -201,11 +212,12 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
             ComponentModel model = writeJSonSchemeAndPropertyConfigurer(classElement, uriEndpoint, aliasTitle, alias,
                     extendsAlias, label, schemes, parentData);
+
             models.put(classElement, model);
         }
     }
 
-    private ComponentModel collectParentData(Map<Class, ComponentModel> models, Class<?> classElement) {
+    private ComponentModel collectParentData(Map<Class<?>, ComponentModel> models, Class<?> classElement) {
         ComponentModel parentData = null;
         final Class<?> superclass = classElement.getSuperclass();
 
@@ -217,7 +229,8 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     String parentScheme = parentUriEndpoint.scheme().split(",")[0];
                     String superClassName = superclass.getName();
                     String packageName = superClassName.substring(0, superClassName.lastIndexOf('.'));
-                    String fileName = packageName.replace('.', '/') + "/" + parentScheme + ".json";
+                    String fileName
+                            = "META-INF/" + packageName.replace('.', '/') + "/" + parentScheme + PackageHelper.JSON_SUFIX;
                     String json = loadResource(fileName);
                     parentData = JsonMapper.generateComponentModel(json);
                 }
@@ -289,6 +302,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             enhanceComponentModelWithApiModel(componentModel);
         }
 
+        SchemaHelper.addModelMetadata(componentModel, project);
+        SchemaHelper.addModelMetadata(componentModel, classElement.getAnnotation(Metadata.class));
+
         String json = JsonMapper.createParameterJsonSchema(componentModel);
 
         // write json schema
@@ -296,7 +312,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         String packageName = name.substring(0, name.lastIndexOf('.'));
         String fileName = scheme + PackageHelper.JSON_SUFIX;
 
-        String file = packageName.replace('.', '/') + "/" + fileName;
+        String file = "META-INF/" + packageName.replace('.', '/') + "/" + fileName;
         updateResource(resourcesOutputDir.toPath(), file, json);
 
         generateEndpointConfigurer(classElement, uriEndpoint, scheme, schemes, componentModel, parentData);
@@ -663,8 +679,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     }
 
     public String getDocumentationWithNotes(BaseOptionModel option) {
-        StringBuilder sb = new StringBuilder();
-        sb.append(option.getDescription());
+        String description = option.getDescription();
+        StringBuilder sb = new StringBuilder(description.length() * 64);
+        sb.append(description);
 
         if (!Strings.isNullOrEmpty(option.getDefaultValueNote())) {
             if (sb.charAt(sb.length() - 1) != '.') {
@@ -719,7 +736,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             Set<String> parentOptionsNames = parentData.getComponentOptions().stream()
                     .map(ComponentOptionModel::getName).collect(Collectors.toSet());
             options = componentModel.getComponentOptions().stream().filter(o -> !parentOptionsNames.contains(o.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             options = componentModel.getComponentOptions();
         }
@@ -777,7 +794,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     .map(EndpointOptionModel::getName).collect(Collectors.toSet());
             options = componentModel.getEndpointParameterOptions().stream()
                     .filter(o -> !parentOptionsNames.contains(o.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             options = componentModel.getEndpointParameterOptions();
         }
@@ -812,8 +829,10 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         model.setConsumerOnly(uriEndpoint.consumerOnly());
         model.setProducerOnly(uriEndpoint.producerOnly());
         model.setLenientProperties(uriEndpoint.lenientProperties());
+        model.setRemote(uriEndpoint.remote());
         model.setAsync(loadClass("org.apache.camel.AsyncEndpoint").isAssignableFrom(endpointClassElement));
         model.setApi(loadClass("org.apache.camel.ApiEndpoint").isAssignableFrom(endpointClassElement));
+        model.setBrowsable(loadClass("org.apache.camel.spi.BrowsableEndpoint").isAssignableFrom(endpointClassElement));
         model.setApiSyntax(uriEndpoint.apiSyntax());
 
         // what is the first version this component was added to Apache Camel
@@ -861,13 +880,15 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         if (endpointClassElement.getAnnotation(Metadata.class) != null) {
             deprecationNote = endpointClassElement.getAnnotation(Metadata.class).deprecationNote();
         }
-        model.setDeprecationNote(deprecationNote);
+        if (!isNullOrEmpty(deprecationNote)) {
+            model.setDeprecationNote(deprecationNote);
+        }
         model.setDeprecatedSince(project.getProperties().getProperty("deprecatedSince"));
 
-        // these information is not available at compile time and we enrich
+        // this information is not available at compile time, and we enrich
         // these later during the camel-package-maven-plugin
         if (model.getJavaType() == null) {
-            throw new IllegalStateException("Could not find component java type");
+            throw new IllegalStateException("Could not find @Component(\"" + scheme + "\") annotated class.");
         }
 
         // favor to use endpoint class javadoc as description
@@ -905,7 +926,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
             // if the component has options with annotations then we only want to generate options that are annotated
             // as ideally components should favour doing this, so we can control what is an option and what is not
-            List<Field> fields = Stream.of(classElement.getDeclaredFields()).collect(Collectors.toList());
+            List<Field> fields = Stream.of(classElement.getDeclaredFields()).toList();
             boolean annotationBasedOptions = fields.stream().anyMatch(f -> f.getAnnotation(Metadata.class) != null)
                     || methods.stream().anyMatch(m -> m.getAnnotation(Metadata.class) != null);
 
@@ -966,6 +987,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 String label = metadata != null ? metadata.label() : null;
                 boolean secret = metadata != null && metadata.secret();
                 boolean autowired = metadata != null && metadata.autowired();
+                boolean supportFileReference = metadata != null && metadata.supportFileReference();
+                boolean largeInput = metadata != null && metadata.largeInput();
+                String inputLanguage = metadata != null ? metadata.inputLanguage() : null;
 
                 // we do not yet have default values / notes / as no annotation
                 // support yet
@@ -1065,7 +1089,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     option.setKind("property");
                     option.setName(name);
                     option.setDisplayName(displayName);
-                    option.setType(getType(fieldTypeName, false, isDuration));
+                    option.setType(MojoHelper.getType(fieldTypeName, false, isDuration));
                     option.setJavaType(fieldTypeName);
                     option.setRequired(required);
                     option.setDefaultValue(defaultValue);
@@ -1081,6 +1105,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     option.setNestedType(nestedType);
                     option.setConfigurationClass(nestedTypeName);
                     option.setConfigurationField(nestedFieldName);
+                    option.setSupportFileReference(supportFileReference);
+                    option.setLargeInput(largeInput);
+                    option.setInputLanguage(inputLanguage);
                     componentModel.addComponentOption(option);
                 }
             }
@@ -1099,7 +1126,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         List<String> enums = null;
         if (metadata != null && !Strings.isNullOrEmpty(metadata.enums())) {
             String[] values = metadata.enums().split(",");
-            enums = Stream.of(values).map(String::trim).collect(Collectors.toList());
+            enums = Stream.of(values).map(String::trim).toList();
         } else if (fieldType != null && fieldType.isEnum()) {
             enums = new ArrayList<>();
             for (Object val : fieldType.getEnumConstants()) {
@@ -1163,7 +1190,6 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
     }
 
-    // CHECKSTYLE:OFF
     protected void findClassProperties(
             ComponentModel componentModel, Class<?> classElement,
             Set<String> excludes, String prefix,
@@ -1198,7 +1224,8 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 }
                 Boolean secret = metadata != null ? metadata.secret() : null;
 
-                if (collectUriPathProperties(componentModel, classElement, excludes, prefix, nestedTypeName, nestedFieldName, componentOption, orgClassElement, metadata, fieldElement, deprecated, deprecationNote, secret)) {
+                if (collectUriPathProperties(componentModel, classElement, excludes, prefix, nestedTypeName, nestedFieldName,
+                        componentOption, orgClassElement, metadata, fieldElement, deprecated, deprecationNote, secret)) {
                     continue;
                 }
                 String fieldName;
@@ -1254,7 +1281,10 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     } else {
                         ApiParam apiParam = fieldElement.getAnnotation(ApiParam.class);
 
-                        collectNonNestedField(componentModel, classElement, nestedTypeName, nestedFieldName, componentOption, apiName, apiOption, apiParams, metadata, fieldElement, deprecated, deprecationNote, secret, fieldName, param, apiParam, name, paramOptionalPrefix, paramPrefix, multiValue, defaultValue, defaultValueNote, required, label, displayName, fieldTypeElement, fieldTypeName);
+                        collectNonNestedField(componentModel, classElement, nestedTypeName, nestedFieldName, componentOption,
+                                apiName, apiOption, apiParams, metadata, fieldElement, deprecated, deprecationNote, secret,
+                                fieldName, param, apiParam, name, paramOptionalPrefix, paramPrefix, multiValue, defaultValue,
+                                defaultValueNote, required, label, displayName, fieldTypeElement, fieldTypeName);
                     }
                 }
             }
@@ -1275,7 +1305,13 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
     }
 
-    private void collectNonNestedField(ComponentModel componentModel, Class<?> classElement, String nestedTypeName, String nestedFieldName, boolean componentOption, String apiName, boolean apiOption, ApiParams apiParams, Metadata metadata, Field fieldElement, boolean deprecated, String deprecationNote, Boolean secret, String fieldName, UriParam param, ApiParam apiParam, String name, String paramOptionalPrefix, String paramPrefix, boolean multiValue, Object defaultValue, String defaultValueNote, boolean required, String label, String displayName, Class<?> fieldTypeElement, String fieldTypeName) {
+    private void collectNonNestedField(
+            ComponentModel componentModel, Class<?> classElement, String nestedTypeName, String nestedFieldName,
+            boolean componentOption, String apiName, boolean apiOption, ApiParams apiParams, Metadata metadata,
+            Field fieldElement, boolean deprecated, String deprecationNote, Boolean secret, String fieldName, UriParam param,
+            ApiParam apiParam, String name, String paramOptionalPrefix, String paramPrefix, boolean multiValue,
+            Object defaultValue, String defaultValueNote, boolean required, String label, String displayName,
+            Class<?> fieldTypeElement, String fieldTypeName) {
         String docComment = param.description();
         if (Strings.isNullOrEmpty(docComment)) {
             docComment = findJavaDoc(fieldElement, fieldName, name, classElement, false);
@@ -1303,6 +1339,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
         boolean isSecret = secret != null && secret || param.secret();
         boolean isAutowired = metadata != null && metadata.autowired();
+        boolean supportFileReference = metadata != null && metadata.supportFileReference();
         String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
                 componentModel.isProducerOnly());
 
@@ -1339,7 +1376,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
         option.setName(name);
         option.setDisplayName(displayName);
-        option.setType(getType(fieldTypeName, false, isDuration));
+        option.setType(MojoHelper.getType(fieldTypeName, false, isDuration));
         option.setJavaType(fieldTypeName);
         option.setRequired(required);
         option.setDefaultValue(defaultValue);
@@ -1358,6 +1395,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         option.setPrefix(paramPrefix);
         option.setOptionalPrefix(paramOptionalPrefix);
         option.setMultiValue(multiValue);
+        option.setSupportFileReference(supportFileReference);
         if (componentOption) {
             option.setKind("property");
             componentModel.addComponentOption((ComponentOptionModel) option);
@@ -1428,7 +1466,10 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
     }
 
-    private boolean collectUriPathProperties(ComponentModel componentModel, Class<?> classElement, Set<String> excludes, String prefix, String nestedTypeName, String nestedFieldName, boolean componentOption, Class<?> orgClassElement, Metadata metadata, Field fieldElement, boolean deprecated, String deprecationNote, Boolean secret) {
+    private boolean collectUriPathProperties(
+            ComponentModel componentModel, Class<?> classElement, Set<String> excludes, String prefix, String nestedTypeName,
+            String nestedFieldName, boolean componentOption, Class<?> orgClassElement, Metadata metadata, Field fieldElement,
+            boolean deprecated, String deprecationNote, Boolean secret) {
         UriPath path = fieldElement.getAnnotation(UriPath.class);
         String fieldName = fieldElement.getName();
         // component options should not include @UriPath as they are for endpoints only
@@ -1486,6 +1527,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
             boolean isSecret = secret != null && secret || path.secret();
             boolean isAutowired = metadata != null && metadata.autowired();
+            boolean supportFileReference = metadata != null && metadata.supportFileReference();
+            boolean largeInput = metadata != null && metadata.largeInput();
+            String inputLanguage = metadata != null ? metadata.inputLanguage() : null;
             String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
                     componentModel.isProducerOnly());
 
@@ -1521,7 +1565,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             option.setName(name);
             option.setKind("path");
             option.setDisplayName(displayName);
-            option.setType(getType(fieldTypeName, false, isDuration));
+            option.setType(MojoHelper.getType(fieldTypeName, false, isDuration));
             option.setJavaType(fieldTypeName);
             option.setRequired(required);
             option.setDefaultValue(defaultValue);
@@ -1537,6 +1581,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             option.setNestedType(nestedType);
             option.setConfigurationClass(nestedTypeName);
             option.setConfigurationField(nestedFieldName);
+            option.setSupportFileReference(supportFileReference);
+            option.setLargeInput(largeInput);
+            option.setInputLanguage(inputLanguage);
             if (componentModel.getEndpointOptions().stream().noneMatch(opt -> name.equals(opt.getName()))) {
                 componentModel.addEndpointOption((EndpointOptionModel) option);
             }
@@ -1569,7 +1616,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     private static List<String> gatherEnums(UriParam param, Class<?> fieldTypeElement) {
         if (!Strings.isNullOrEmpty(param.enums())) {
             String[] values = param.enums().split(",");
-            return Stream.of(values).map(String::trim).collect(Collectors.toList());
+            return Stream.of(values).map(String::trim).toList();
         } else if (fieldTypeElement.isEnum()) {
             return doGatherFromEnum(fieldTypeElement);
         }
@@ -1580,14 +1627,13 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     private static List<String> gatherEnums(UriPath path, Class<?> fieldTypeElement) {
         if (!Strings.isNullOrEmpty(path.enums())) {
             String[] values = path.enums().split(",");
-            return Stream.of(values).map(String::trim).collect(Collectors.toList());
+            return Stream.of(values).map(String::trim).toList();
         } else if (fieldTypeElement.isEnum()) {
             return doGatherFromEnum(fieldTypeElement);
         }
 
         return null;
     }
-    // CHECKSTYLE:ON
 
     private static boolean isNullOrEmpty(Object value) {
         return value == null || "".equals(value) || "null".equals(value);
@@ -1606,8 +1652,6 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         return false;
     }
 
-    // CHECKSTYLE:ON
-
     private static boolean isGroovyMetaClassProperty(final Method method) {
         final String methodName = method.getName();
 
@@ -1625,9 +1669,24 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
         try {
             boolean extended = model.isApi(); // if the component is api then the generated configurer should be an extended configurer
-            String source = PropertyConfigurerGenerator.generatePropertyConfigurer(pn, cn, en, pfqn, psn, hasSuper, component,
-                    extended, false,
-                    options, model);
+
+            options = options.stream().sorted(Comparator.comparing(BaseOptionModel::getName)).collect(Collectors.toList());
+
+            Map<String, Object> ctx = new HashMap<>();
+            ctx.put("generatorClass", getClass().getName());
+            ctx.put("package", pn);
+            ctx.put("className", cn);
+            ctx.put("type", en);
+            ctx.put("pfqn", pfqn);
+            ctx.put("psn", psn);
+            ctx.put("hasSuper", hasSuper);
+            ctx.put("component", component);
+            ctx.put("extended", extended);
+            ctx.put("bootstrap", false);
+            ctx.put("options", options);
+            ctx.put("model", model);
+            ctx.put("mojo", this);
+            String source = velocity("velocity/property-configurer.vm", ctx);
 
             updateResource(sourcesOutputDir.toPath(), fqn.replace('.', '/') + ".java", source);
         } catch (Exception e) {
@@ -1637,13 +1696,11 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     }
 
     protected void generateMetaInfConfigurer(String name, String fqn) {
-        try (Writer w = new StringWriter()) {
-            w.append("# " + GENERATED_MSG + "\n");
-            w.append("class=").append(fqn).append("\n");
-            updateResource(resourcesOutputDir.toPath(), "META-INF/services/org/apache/camel/configurer/" + name, w.toString());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+        StringBuilder w = new StringBuilder(256);
+
+        w.append("# ").append(GENERATED_MSG).append("\n");
+        w.append("class=").append(fqn).append("\n");
+        updateResource(resourcesOutputDir.toPath(), "META-INF/services/org/apache/camel/configurer/" + name, w.toString());
     }
 
     private IndexView getIndex() {
@@ -1785,7 +1842,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         if (sourceRoots == null) {
             sourceRoots = project.getCompileSourceRoots().stream()
                     .map(Paths::get)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return sourceRoots;
     }
@@ -1841,79 +1898,6 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         String fieldTypeName = new GenericType(fieldType).toString();
         fieldTypeName = fieldTypeName.replace('$', '.');
         return fieldTypeName;
-    }
-
-    /**
-     * Gets the JSON schema type.
-     *
-     * @param  type the java type
-     * @return      the json schema type, is never null, but returns <tt>object</tt> as the generic type
-     */
-    public static String getType(String type, boolean enumType, boolean isDuration) {
-        if (enumType) {
-            return "enum";
-        } else if (isDuration) {
-            return "duration";
-        } else if (type == null) {
-            // return generic type for unknown type
-            return "object";
-        } else if (type.equals(URI.class.getName()) || type.equals(URL.class.getName())) {
-            return "string";
-        } else if (type.equals(File.class.getName())) {
-            return "string";
-        } else if (type.equals(Date.class.getName())) {
-            return "string";
-        } else if (type.startsWith("java.lang.Class")) {
-            return "string";
-        } else if (type.startsWith("java.util.List") || type.startsWith("java.util.Collection")) {
-            return "array";
-        }
-
-        String primitive = getPrimitiveType(type);
-        if (primitive != null) {
-            return primitive;
-        }
-
-        return "object";
-    }
-
-    /**
-     * Gets the JSON schema primitive type.
-     *
-     * @param  name the java type
-     * @return      the json schema primitive type, or <tt>null</tt> if not a primitive
-     */
-    public static String getPrimitiveType(String name) {
-        // special for byte[] or Object[] as its common to use
-        if ("java.lang.byte[]".equals(name) || "byte[]".equals(name)) {
-            return "string";
-        } else if ("java.lang.Byte[]".equals(name) || "Byte[]".equals(name)) {
-            return "array";
-        } else if ("java.lang.Object[]".equals(name) || "Object[]".equals(name)) {
-            return "array";
-        } else if ("java.lang.String[]".equals(name) || "String[]".equals(name)) {
-            return "array";
-        } else if ("java.lang.Character".equals(name) || "Character".equals(name) || "char".equals(name)) {
-            return "string";
-        } else if ("java.lang.String".equals(name) || "String".equals(name)) {
-            return "string";
-        } else if ("java.lang.Boolean".equals(name) || "Boolean".equals(name) || "boolean".equals(name)) {
-            return "boolean";
-        } else if ("java.lang.Integer".equals(name) || "Integer".equals(name) || "int".equals(name)) {
-            return "integer";
-        } else if ("java.lang.Long".equals(name) || "Long".equals(name) || "long".equals(name)) {
-            return "integer";
-        } else if ("java.lang.Short".equals(name) || "Short".equals(name) || "short".equals(name)) {
-            return "integer";
-        } else if ("java.lang.Byte".equals(name) || "Byte".equals(name) || "byte".equals(name)) {
-            return "integer";
-        } else if ("java.lang.Float".equals(name) || "Float".equals(name) || "float".equals(name)) {
-            return "number";
-        } else if ("java.lang.Double".equals(name) || "Double".equals(name) || "double".equals(name)) {
-            return "number";
-        }
-
-        return null;
     }
 
     /**
